--- a/nutrition.tex
+++ b/nutrition.tex
@@ -8,6 +8,8 @@
 \title{Што і калі есьці}
 \date{2020 Пераклад 2022}
 
+% \includeonly{willpower/chapter4}
+
 \begin{document}
 
 \CoverPic{nutrition/cover.png}
