--- a/nutrition/chapter14.tex
+++ b/nutrition/chapter14.tex
@@ -13,7 +13,7 @@
 
 \tipbox{У старажытнасьці некаторымі хваробамі ганарыліся, лічылі іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, бо толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў~спалучэньні з~маларухомым ладам жыцьця.}
 
-Многія «хваробы цывілізацыі», распаўсюджаныя сёньня (алергіі, атлусьценьне, дыябэт, дэпрэсія), у~старажытнасьці былі толькі ў~некаторых людзей з~высокім сацыяльным статусам і даходам, а~дакладней~--- зь няправільным харчаваньнем, гіпадынаміяй і нястрымнасьцю. Больш за тое, некаторымі хваробамі нават ганарыліся, лічачы іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, паколькі толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў~спалучэньні з~маларухомым ладам жыцьця. Гэта ж датычыцца і цукровага дыябэту другога тыпу, які сустракаўся, як правіла, толькі ў~багатых. Алергія першапачаткова таксама была прыкметай заможнасьці. Сянны катар быў «моднай» хваробай эліты. Лекары адразу заўважылі, што хвароба сустракаецца ў~багатых, а~ў сялян яе не назіралася. Чаму? Багатыя больш пераядалі, елі больш тлустага, мучнога, салодкага, менш рухаліся, таму і часьцей хварэлі. Цяпер сытуацыя поўнасьцю перакулілася. Калярыйная бедная ежа (мучное, тлустае, цукар) стала таннай, а~вось "багатыя" прадукты (морапрадукты, зеляніна, якаснае мяса, ягады і гародніна) сталі даражэйшымі.
+Многія «хваробы цывілізацыі», распаўсюджаныя сёньня (алергіі, атлусьценьне, дыябэт, дэпрэсія), у~старажытнасьці былі толькі ў~некаторых людзей з~высокім сацыяльным статусам і даходам, а~дакладней~--- зь няправільным харчаваньнем, гіпадынаміяй і нястрымнасьцю. Больш за тое, некаторымі хваробамі нават ганарыліся, лічачы іх прыкметай вытанчанасьці. Так, падагру называлі хваробай каралёў, паколькі толькі багатым людзям была даступная такая колькасьць бялковай ежы і алькаголю на працягу доўгага часу ў~спалучэньні з~маларухомым ладам жыцьця. Гэта ж датычыцца і цукровага дыябэту другога тыпу, які сустракаўся, як правіла, толькі ў~багатых. Алергія першапачаткова таксама была прыкметай заможнасьці. Сянны катар быў «моднай» хваробай эліты. Лекары адразу заўважылі, што хвароба сустракаецца ў~багатых, а~ў сялян яе не назіралася. Чаму? Багатыя больш пераядалі, елі больш тлустага, мучнога, салодкага, менш рухаліся, таму і часьцей хварэлі. Цяпер сытуацыя поўнасьцю перакулілася. Калярыйная бедная ежа (мучное, тлустае, цукар) стала таннай, а~вось ``багатыя'' прадукты (морапрадукты, зеляніна, якаснае мяса, ягады і гародніна) сталі даражэйшымі.
 
 \subsection{Як гэта ўплывае на здароўе?}
 
@@ -29,7 +29,7 @@
 \tipbox{Калярыйныя прадукты бедныя вітамінамі і мікраэлемэнтамі. Сэлекцыя, якая прыводзіць да павелічэньня ўтрыманьня крухмалу і тлушчу, паскарэньня росту, адначасова вядзе і да зьніжэньня ўтрыманьня карысных рэчываў.}
 
 \paragraph{Удзельная шчыльнасьць вугляводаў і кішачнік.}
-Рэч у~тым, што навуковыя дасьледаваньні паказалі: менавіта ўдзельная шчыльнасьць вугляводаў, а~не глікемічны індэкс, уплывае на іх дзеяньне. Чым вышэйшая шчыльнасьць, тым мацнейшы яе ўплыў на мікрафлёру і тым мацнейшая запаленчая рэакцыя, незалежна ад агульнай колькасьці вугляводаў. Пасьля прыёму канцэнтраваных вугляводаў узьнікае «мэтабалічная эндатаксэмія» (павелічэньне ўзроўню таксынаў), якая трымаецца да 5 гадзінаў пасьля яды. Гэта выклікае хранічнае запаленьне, што прыводзіць да лептынарэзыстэнтнасьці і парушэньня працы вагусу, зьніжае насычэньне, гнетучы актыўнасьць такіх мэдыятараў насычэньня, як халецыстакінін, пэптыд YY. Даведзена, што харчаваньне "старажытнымі" вугляводамі прыводзіць да зьмены мікрафлёры, зьніжэньня пранікальнасьці кішачніка і памяншэньня выяўнасьці запаленчых зьяваў. Аналягічная колькасьць "сучасных" вугляводаў не аказвае падобнага эфэкту. Чым больш «сучасных» вугляводаў, тым больш неспрыяльнай мікрафлёры як у~ротавай поласьці, так і ў~тонкім кішачніку, і тым мацнейшы запаленчы статут арганізму.
+Рэч у~тым, што навуковыя дасьледаваньні паказалі: менавіта ўдзельная шчыльнасьць вугляводаў, а~не глікемічны індэкс, уплывае на іх дзеяньне. Чым вышэйшая шчыльнасьць, тым мацнейшы яе ўплыў на мікрафлёру і тым мацнейшая запаленчая рэакцыя, незалежна ад агульнай колькасьці вугляводаў. Пасьля прыёму канцэнтраваных вугляводаў узьнікае «мэтабалічная эндатаксэмія» (павелічэньне ўзроўню таксынаў), якая трымаецца да 5 гадзінаў пасьля яды. Гэта выклікае хранічнае запаленьне, што прыводзіць да лептынарэзыстэнтнасьці і парушэньня працы вагусу, зьніжае насычэньне, гнетучы актыўнасьць такіх мэдыятараў насычэньня, як халецыстакінін, пэптыд YY. Даведзена, што харчаваньне ``старажытнымі'' вугляводамі прыводзіць да зьмены мікрафлёры, зьніжэньня пранікальнасьці кішачніка і памяншэньня выяўнасьці запаленчых зьяваў. Аналягічная колькасьць ``сучасных'' вугляводаў не аказвае падобнага эфэкту. Чым больш «сучасных» вугляводаў, тым больш неспрыяльнай мікрафлёры як у~ротавай поласьці, так і ў~тонкім кішачніку, і тым мацнейшы запаленчы статут арганізму.
 
 Чым вышэйшая ўдзельная калярыйная шчыльнасьць, тым ніжэйшая разнастайнасьць мікрафлёры. Так, узровень Bacteroidetes вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Firmicutes вышэйшы на дыеце ў~4\,Ккал/грамаў. Узровень Parabacteroides вышэйшы на дыеце ў~2\,Ккал/грамаў, а~ўзровень Barnesiella вышэйшы на дыеце ў~4\,Ккал/грамаў.
 
