--- a/nutrition/chapter18.tex
+++ b/nutrition/chapter18.tex
@@ -94,7 +94,7 @@
 Чым цяжэйшыя талеркі і прыборы, тым хутчэй мы насычаемся, бо мозгу складаней адрозьніваць вагу прадукту і талеркі.
 
 \paragraph{Называйце сваю ежу.}
-Чым смачнейшую і апэтытнейшую назву сваёй страве вы дасьце, тым болей задавальненьня атрымаеце. Не пакідайце вашую гатоўлю безназоўнай, а~давайце ёй яркія назвы! Напрыклад, "чароўная сьвежая капуста з~градкі бабулі Сьцепаніды, прытушаная з~духмяным топленым вясковым сьметанковым маслам".
+Чым смачнейшую і апэтытнейшую назву сваёй страве вы дасьце, тым болей задавальненьня атрымаеце. Не пакідайце вашую гатоўлю безназоўнай, а~давайце ёй яркія назвы! Напрыклад, ``чароўная сьвежая капуста з~градкі бабулі Сьцепаніды, прытушаная з~духмяным топленым вясковым сьметанковым маслам''.
 
 \paragraph{Пашырайце досьвед.}
 Дасьледаваньні паказалі, што, калі вы глядзіце прыгожыя фота ежы, можаце зьмяніць стаўленьне да гэтых прадуктаў. Так, гародніна, выдатна пададзеная, падасца вам нашмат смачнейшай.
