--- a/nutrition/chapter19.tex
+++ b/nutrition/chapter19.tex
@@ -15,7 +15,7 @@
 Што да крухмалаў, то яшчэ дзесяць тысячаў гадоў таму людзі пачалі генэтычна прыстасоўвацца да яго спажываньня. Так, ёсьць ген AMY1, які кадуе фэрмэнт альфа-амілазу, што расшчапляе крухмал. Дык вось тыя народы, якія здаўна займаюцца сельскай гаспадаркай, маюць больш копіяў гену (аж да 20), а~іншыя~--- усяго некалькі. Чым менш копіяў гена, тым вышэйшая рызыка атлусьценьня. Таму тыя народы, што даўно вырошчваюць крухмалістыя прадукты, лягчэй іх і пераносяць.
 
 \paragraph{Рафінаваньне прадуктаў.}
-У разьдзеле пра ўдзельную шчыльнасьць калёрыяў мы ўжо згадвалі, што спажываньне вялікай колькасьці вугляводаў у~выглядзе цэльнай гародніны, садавіны і зеляніны карыснае для здароўя, а~вось вычышчаныя мучныя вырабы аказваюць нэгатыўны ўплыў. Нашаму арганізму эвалюцыйна карысьнейшыя "клеткавыя" вугляводы, прадстаўленыя клубнямі, лісьцем, гароднінай і садавіной. "Клеткавыя" вугляводы знаходзяцца ў~жывых клетках і пры трапленьні ў~арганізм павольна руйнуюцца і вызваляюцца.
+У разьдзеле пра ўдзельную шчыльнасьць калёрыяў мы ўжо згадвалі, што спажываньне вялікай колькасьці вугляводаў у~выглядзе цэльнай гародніны, садавіны і зеляніны карыснае для здароўя, а~вось вычышчаныя мучныя вырабы аказваюць нэгатыўны ўплыў. Нашаму арганізму эвалюцыйна карысьнейшыя ``клеткавыя'' вугляводы, прадстаўленыя клубнямі, лісьцем, гароднінай і садавіной. ``Клеткавыя'' вугляводы знаходзяцца ў~жывых клетках і пры трапленьні ў~арганізм павольна руйнуюцца і вызваляюцца.
 
 Сёньня мы ямо занадта шмат «няклеткавых», ці «сучасных» вугляводаў, якія атрымліваюцца з~мэханічна і тэрмічна апрацаванай збажыны, бабовых і інш. Такія вугляводы расшчапляюцца значна хутчэй і ствараюць больш высокую канцэнтрацыю як у~ротавай поласьці, так і ў~кішачніку. Яны пагаршаюць кішачную мікрафлёру, спрыяюць больш выяўленаму запаленчаму адказу арганізму, моцна нагружаюць сыстэму рэгуляцыі вугляводнага абмену, зьмяншаюць адчувальнасьць да інсуліну. Цяпер людзі ядуць усё менш цэльнай расьліннай ежы і ўсё больш перапрацаванай у~выглядзе вытворных мукі, соевага парашку, высушанага бульбянога крухмалу. Такія прадукты нашмат шкаднейшыя, чым цэльныя расьлінныя. Што да іншых аспэктаў, дык важна зьвярнуць увагу, што вугляводы лепш засвойваюцца на тле больш высокага ўтрыманьня вітаміну D, як гэта бывае ўлетку.
 
@@ -132,7 +132,7 @@
 FODMAP~--- гэта англамоўны тэрмін-акронім, які пазначае вугляводы з~кароткім ланцугом (алігацукрыды, дыцукрыды, монацукрыды, паліолы), што кепска ўсмоктваюцца і могуць прыводзіць да падвышанага газаўтварэньня ды іншым разладаў. Але ў~малой колькасьці яны зьяўляюцца прабіётыкамі. Фруктоза, якой шмат у~цукры і садавіне, фруктаны ў~гародніне (капусты, часнык), галяктаны (соя, бабы), ляктоза (малочны цукар) і іншыя. Іх абмежаваньне можа дапамагчы пры парушэньнях стрававальнага працэсу.
 
 \paragraph{Безглютэнавая дыета.}
-Людзям, якія маюць генэтычную схільнасьць да цэліякіі, важна прыбраць глютэназьмяшчальныя прадукты з~рацыёну. Існуюць зьвесткі, што ёсьць непераноснасьць глютэну, не зьвязаная з~цэліякіяй, магчыма, што людзям з~сындромам раздражнёнага кішачніка і некаторымі іншымі станамі (шызафрэнія і да т.~п.) будзе карысна прыбраць глютэн. Але для абсалютнай большасьці здаровых людзей плюсаў менавіта ад адсутнасьці глютэну ня будзе, а~эфэкт "безглютенавай" дыеты зьвязаны толькі са зьмяншэньнем хлебабулачных вырабаў у~рацыёне. Але ў~такіх прадуктах нічога незаменнага няма!
+Людзям, якія маюць генэтычную схільнасьць да цэліякіі, важна прыбраць глютэназьмяшчальныя прадукты з~рацыёну. Існуюць зьвесткі, што ёсьць непераноснасьць глютэну, не зьвязаная з~цэліякіяй, магчыма, што людзям з~сындромам раздражнёнага кішачніка і некаторымі іншымі станамі (шызафрэнія і да т.~п.) будзе карысна прыбраць глютэн. Але для абсалютнай большасьці здаровых людзей плюсаў менавіта ад адсутнасьці глютэну ня будзе, а~эфэкт ``безглютенавай'' дыеты зьвязаны толькі са зьмяншэньнем хлебабулачных вырабаў у~рацыёне. Але ў~такіх прадуктах нічога незаменнага няма!
 
 \paragraph{Вэганская дыета.}
 Поўная адмова ад прадуктаў жывёльнага паходжаньня ня мае даведзеных карысных уласьцівасьцяў, але пры гэтым павялічвае шэраг рызыкаў для здароўя, спалучаных з~дэфіцытам шматлікіх важных злучэньняў, уключаючы вітамін В12, вітамін D, цынк, жалеза і іншыя. Дасьледаваньні паказваюць, што вэганы маюць павышаную рызыку сьмерці ў~параўнаньні зь людзьмі, якія прытрымліваюцца іншых клясычных дыетаў, напрыклад міжземнаморскай. З~іншага боку, вэгетарыянскія дыеты зьмяншаюць рызыку цукровага дыябету і маюць шэраг карысных уласьцівасьцяў.
