--- a/willpower/chapter1.tex
+++ b/willpower/chapter1.tex
@@ -190,7 +190,7 @@
 
 Праз такі «парадак дня» наш мозг разглядае наша існаваньне асобна ад асяродзьдзя, заўважае ўвесьчасныя напады шкодных чыньнікаў і зводзіць сваё разьвіцьцё адно да спосабаў распрацоўкі больш дасканалага ўзбраеньня. Роля самога чалавека (жаўнера) нязначная, бо камандуюць і прымаюць рашэньні толькі палявыя камандыры (урачы), а~мы пачуваемся адстароненымі як ад прыняцьця рашэньняў, так і ад разуменьня таго, што насамрэч адбываецца. 
 
-\tipbox{Ёсьць жарт пра тое, што «магчымасьці мэдыцыны бязьмежныя, абмежаваныя толькі магчымасьці канкрэтнага пацыента". Успомніце, як непрыемна, калі лекары абмяркоўваюць ваш стан, цалкам ігнаруючы вас і вашыя пытаньні!}
+\tipbox{Ёсьць жарт пра тое, што «магчымасьці мэдыцыны бязьмежныя, абмежаваныя толькі магчымасьці канкрэтнага пацыента''. Успомніце, як непрыемна, калі лекары абмяркоўваюць ваш стан, цалкам ігнаруючы вас і вашыя пытаньні!}
 
 Такая ваенная мэтафара добра пасуе да лекаваньня канкрэтнай хваробы. Аднак далёка не заўсёды мэты і сродкі «лекаваньня хваробаў» супадаюць з~«умацаваньнем здароўя». Калі мы паглядзім на здароўе як на балянс арганізму і навакольнага асяродзьдзя, балянс цела і розуму, то зможам зразумець, што зьяўляемся часткай асяродзьдзя: мы адаптуемся да яго ды імкнёмся да раўнавагі.
 
