--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -14,9 +14,9 @@
 
 На працягу свайго жыцьця мы жывём у~розных месцах і часта выбіраем іх выпадкова. Нават у~рамках аднаго дня мы бываем у~пэўнай колькасьці месцаў. Прааналізуйце іх і падумайце, як яны ўплываюць на ваша здароўе. Магчыма, частку гэтых месцаў можна зьмяніць на больш здаровыя?
 
-Аптымальныя ўмовы навакольнага асяродзьдзя~--- гэта такое асяродзьдзе, у~якім у~нас выяўляецца аптымальнае самаадчуваньне, мінімальная рызыка захворваньняў і высокая працягласьць жыцьця. Вельмі часта сацыяльныя (атачэньне), фізычныя (шум, сьвятло, тэмпэратура, выпраменьваньне), хімічныя (паветра, вада, прадукты) і біялягічныя (цьвіль, паразіты) чыньнікі злучаюцца і дзейнічаюць разам. Таму важна падтрымліваць гігіену навакольнага асяродзьдзя. Вялікае значэньне мае мікраклімат у~кватэры і хаце. Спалучэньне неспрыяльных аздобных матэрыялаў, тэмпэратуры, вільготнасьці, вэнтыляцыі можа прывесьці да сындрому "хворага дому", які разбурае здароўе сваіх насельнікаў і кароціць жыцьцё.
+Аптымальныя ўмовы навакольнага асяродзьдзя~--- гэта такое асяродзьдзе, у~якім у~нас выяўляецца аптымальнае самаадчуваньне, мінімальная рызыка захворваньняў і высокая працягласьць жыцьця. Вельмі часта сацыяльныя (атачэньне), фізычныя (шум, сьвятло, тэмпэратура, выпраменьваньне), хімічныя (паветра, вада, прадукты) і біялягічныя (цьвіль, паразіты) чыньнікі злучаюцца і дзейнічаюць разам. Таму важна падтрымліваць гігіену навакольнага асяродзьдзя. Вялікае значэньне мае мікраклімат у~кватэры і хаце. Спалучэньне неспрыяльных аздобных матэрыялаў, тэмпэратуры, вільготнасьці, вэнтыляцыі можа прывесьці да сындрому ``хворага дому'', які разбурае здароўе сваіх насельнікаў і кароціць жыцьцё.
 
-Многія людзі зьвяртаюцца да розных спосабаў "дэтаксікацыі", але, па сутнасьці, самы надзейны спосаб паменшыць таксічную нагрузку~--- гэта зьнізіць трапленьне шкодных рэчываў у~арганізм, то бок палепшыць асяродзьдзе, у~якім мы жывём. Наша мэта~--- навучыцца ў~любым месцы выяўляць шкодныя чыньнікі асяродзьдзя і ліквідаваць іх, плюс папоўніваць брак карысных чыньнікаў у~сваім асяродзьдзі для фармаваньня аптымальных умоваў.
+Многія людзі зьвяртаюцца да розных спосабаў ``дэтаксікацыі'', але, па сутнасьці, самы надзейны спосаб паменшыць таксічную нагрузку~--- гэта зьнізіць трапленьне шкодных рэчываў у~арганізм, то бок палепшыць асяродзьдзе, у~якім мы жывём. Наша мэта~--- навучыцца ў~любым месцы выяўляць шкодныя чыньнікі асяродзьдзя і ліквідаваць іх, плюс папоўніваць брак карысных чыньнікаў у~сваім асяродзьдзі для фармаваньня аптымальных умоваў.
 
 \subsubsection{Пытаньні і заданьні}
 
@@ -62,7 +62,7 @@
 
 \section{Барацьба з~брудным паветрам}
 
-Джэнтльмэн у~5 гадзінаў раніцы вывальваецца з~бару і зьдзіўлена пытаецца: "Швайцар, што за дзіўны пах?"~--- "Гэта чыстае паветра, сэр". Спадзявацца на свае органы пачуцьцяў для ацэнкі паветра не заўсёды добрая ідэя, бо мы прыстасоўваемся да любога асяродзьдзя і перастаём заўважаць працягла дзейсныя раздражняльнікі. Таму нам патрэбныя аб'ектыўныя спосабы вымярэньня якасьці паветра.
+Джэнтльмэн у~5 гадзінаў раніцы вывальваецца з~бару і зьдзіўлена пытаецца: ``Швайцар, што за дзіўны пах?''~--- ``Гэта чыстае паветра, сэр''. Спадзявацца на свае органы пачуцьцяў для ацэнкі паветра не заўсёды добрая ідэя, бо мы прыстасоўваемся да любога асяродзьдзя і перастаём заўважаць працягла дзейсныя раздражняльнікі. Таму нам патрэбныя аб'ектыўныя спосабы вымярэньня якасьці паветра.
 
 Першае, з~чаго трэба пачаць, гэта весьці маніторынг якасьці паветра. У гарадах, дзе шмат датчыкаў, можна скарыстацца мапамі, на якіх выводзяцца штохвілінныя паказьнікі, і ўсталяваць іх на тэлефон. Калі ў~вашым горадзе такой сыстэмы датчыкаў няма ці вы хочаце атрымаць высокую дакладнасьць вымярэньняў, то можна набыць датчык якасьці паветра для сябе~--- абавязкова з~вымярэньнем колькасьці часьціц P2,5. Многія датчыкі сынхранізуюцца са смартфонамі, і канкрэтныя лічбы будуць заўсёды ў~вас пад рукой. Некаторыя вытворцы дазваляюць уключыць свой датчык у~глябальную сетку, напрыклад, AirVision. Так ваша вымярэньне становіцца даступным і для людзей побач.
 
@@ -70,7 +70,7 @@
 
 Кожны мэтар мае значэньне, бо з~аддаленьнем ад крыніцы забруджваньне скарачаецца экспанентна, выхлапы разводзяцца чыстым паветрам. Гуляйце ці рабіце прагулкі не ў~гадзіну пік і не адразу ж пасьля яе заканчэньня. Калі вы ідзяце з~маленькімі дзецьмі, то паднімайце іх на рукі, каб трымаць вышэй за ўзровень выхлапных газаў. Ня стойце каля самай дарогі, калі чакаеце зялёнага сыгнала сьвятлафора. Памятайце, што важная ня проста адсутнасьць трасы або завода побач, але і кірунак ветру. Калі праз надвор'е, слабы вецер ці пажары ў~горадзе паўстаў смог, па магчымасьці выязджайце за горад ці трымайце дома ўключаны фільтр ачысткі паветра (пра фільтры ніжэй) пры закрытых вокнах.
 
-Аптымізуйце маршруты для прагулак і прабежак, выбірайце аддаленыя зялёныя вулачкі, гэта можа зьнізіць узьдзеяньне бруднага паветра на 50-60\,\%. Будзе выдатна, калі навігатары навучацца пракладаць ня толькі самы хуткі, але й самы "зялёны" маршрут.
+Аптымізуйце маршруты для прагулак і прабежак, выбірайце аддаленыя зялёныя вулачкі, гэта можа зьнізіць узьдзеяньне бруднага паветра на 50-60\,\%. Будзе выдатна, калі навігатары навучацца пракладаць ня толькі самы хуткі, але й самы ``зялёны'' маршрут.
 
 Гэтае правіла тычыцца і кіроўцаў, бо доўгая дарога за рулём і заторы павялічваюць рызыку ўдыханьня бруднага паветра. Не прыціскайце нос свайго аўтамабіля да выхлапной трубы машыны, якая стаіць наперадзе. У заторы лепш закрыць вокны і адключыць вэнтыляцыю салёна, гэта дазволіць зьменшыць забруджваньне ад суседніх машын. Па магчымасьці, менш карыстайцеся аўтамабілем у~гадзіну пік. У некаторых машынах, напрыклад у~Tesla, усталяваныя вельмі якасныя фільтры салёна, зьвяртайце на гэта ўвагу пры выбары і абслугоўваньні аўто.
 
@@ -107,7 +107,7 @@
 
 Сярэдняя канцэнтрацыя вуглякіслага газу (СО2) складае ў~вонкавым паветры 0,035\,\%, ці 350 ppm. Але ў~гарадах, дзе больш спальваньня паліва, яго канцэнтрацыя можа дасягаць і 500 ppm. Галоўная крыніца вуглякіслага газу ўнутры памяшканьняў~--- гэта мы самі. Кожны чалавек на кожным выдыху выдыхае паветра з~падвышаным утрыманьнем вуглякіслага газу, які ўтварыўся ў~выніку жыцьцядзейнасьці. Каб падтрымліваць узровень СО2 на нармальных 800 ppm на аднаго чалавека ў~пакоі, патрабуецца вэнтыляцыя каля 34 м3/гадзіну! Калі вокны і дзьверы зашпунтаваныя, а~вэнтыляцыя не працуе, то ўзровень СО2 хутка пачне зашкальваць.
 
-Праблема вэнтыляцыі існуе: з~аднаго боку, будаўнікі часта грэбуюць нормамі, робячы няўдалыя сыстэмы вэнтыляцыі, эфэктыўнасьць работы якіх ніхто не правярае. Зь цягам часу шахты могуць забівацца брудам, зашывацца~--- звонку гэта не прыкметна. Зьяўленьне плястыкавых вокнаў яшчэ пагоршыла сытуацыю. Бо ў~драўляных вокнах было шмат невялікіх шчылінаў, якія забясьпечвалі мікравэнтыляцыю, а~цяпер гэтага няма. Часта мы закрываемся "наглуха" для цішыні або цяпла. Зьяўленьне ізалявальных матэрыялаў, ушчыльняльнікаў, пракладак для дзьвярэй і вокнаў дазваляе нам цалкам зашпунтаваць сябе ў~хатах. А калі прытоку паветра няма, то і вэнтыляцыя перастае працаваць як мае быць.
+Праблема вэнтыляцыі існуе: з~аднаго боку, будаўнікі часта грэбуюць нормамі, робячы няўдалыя сыстэмы вэнтыляцыі, эфэктыўнасьць работы якіх ніхто не правярае. Зь цягам часу шахты могуць забівацца брудам, зашывацца~--- звонку гэта не прыкметна. Зьяўленьне плястыкавых вокнаў яшчэ пагоршыла сытуацыю. Бо ў~драўляных вокнах было шмат невялікіх шчылінаў, якія забясьпечвалі мікравэнтыляцыю, а~цяпер гэтага няма. Часта мы закрываемся ``наглуха'' для цішыні або цяпла. Зьяўленьне ізалявальных матэрыялаў, ушчыльняльнікаў, пракладак для дзьвярэй і вокнаў дазваляе нам цалкам зашпунтаваць сябе ў~хатах. А калі прытоку паветра няма, то і вэнтыляцыя перастае працаваць як мае быць.
 
 Перадусім~--- вымяраем! Існуе вялікая колькасьць датчыкаў, як аўтаномных, так і такіх, што сынхранізуюцца са смартфонамі. Хоць мы вымяраем узровень вуглякіслага газу, гэтая лічба кажа нам і аб якасьці вэнтыляцыі ў~цэлым. Чым менш узровень СО2, тым лепш якасьць паветра, уключаючы разнастайную колькасьць выдыханых намі малекул і нават бактэрыяў. СО2 выступае як газ-дэтэктар якасьці паветра. Ідэальныя ўзроўні СО2~--- да 450 ppm, прымальна да 600-800, стандартная норма да 1000, ад 1000 да 2500~--- млявасьць, зьніжэньне самаадчуваньня, дрэнны сон і да т.~п., вышэй за 2500 ppm~--- пажадана пакінуць памяшканьне.
 
@@ -134,7 +134,7 @@
 
 \section{Шум}
 
-Шум не раздражняе адно тады, калі ты ў~ім удзельнічаеш~--- так кажуць, і гэта праўда. Сярод стрэсагенных чыньнікаў для насельнікаў кватэр шум упэўнена займае адно зь першых месцаў. Сваю кватэру, дзе я цяпер пішу гэтыя радкі, я абраў, у~тым ліку, па крытэры цішыні~--- верхні паверх, вуглавая кватэра і вокны на тры бакі, стары цагляны дом. Прымусіў мяне гэта зрабіць няўдалы папярэдні досьвед з~шумнымі суседзямі. Выдатна разумею фразу гішпанскага пісьменьніка Рамона Сэрна, што "ўключаны пыласос у~суседа ўцягвае ўсе нашы думкі".
+Шум не раздражняе адно тады, калі ты ў~ім удзельнічаеш~--- так кажуць, і гэта праўда. Сярод стрэсагенных чыньнікаў для насельнікаў кватэр шум упэўнена займае адно зь першых месцаў. Сваю кватэру, дзе я цяпер пішу гэтыя радкі, я абраў, у~тым ліку, па крытэры цішыні~--- верхні паверх, вуглавая кватэра і вокны на тры бакі, стары цагляны дом. Прымусіў мяне гэта зрабіць няўдалы папярэдні досьвед з~шумнымі суседзямі. Выдатна разумею фразу гішпанскага пісьменьніка Рамона Сэрна, што ``ўключаны пыласос у~суседа ўцягвае ўсе нашы думкі''.
 
 Чаму ж так цяжка прыстасавацца да шуму? Бо мы рэагуем на яго вельмі хутка. Гук~--- гэта адна з~крыніц інфармацыі аб навакольным сьвеце. Нас атачаюць гукі, як прыемныя прыродныя: птушкі, хвалі, дождж, так і небясьпечныя: гук стоенага злодзея або выбух пэтардаў. Асаблівасьць у~тым, што мы рэагуем на гукавыя раздражняльнікі хутчэй, чым на візуальныя, 140-160 мілісэкунд супраць 180-200, таму цяжэй тармазіць сваё раздражненьне.
 
@@ -146,7 +146,7 @@
 
 Начны шум~--- гэта нябачная крыніца хранічнага стрэсу, які назапашваецца. Ён выклікае эндатэліяльную дысфункцыю (пашыральнасьць артэрый), павялічвае аксідатыўны стрэс, пагаршае імунітэт і павялічвае ціск. У шэрагу дасьледаваньняў паказана залежнасьць частаты артэрыяльнай гіпэртэнзіі ад ажыўленасьці вуліцы, куды выходзяць вокны спальні: калі на дарогу, рызыка значна вышэйшая. Яшчэ вышэйшая рызыка ў~тых, хто сьпіць з~адкрытымі вокнамі, якія выходзяць на дарогу.
 
-Цішыня на вагу золата. Чым вышэйшая шчыльнасьць насельніцтва і больш мэханізмаў вакол нас, тым больш і шуму. У сучасным сьвеце, калі шчыльнасьць насельніцтва ўзрастае, шчыльнасьць забудовы расьце, колькасьць аўтамабіляў павялічваецца, зьяўляецца больш гукаўзнаўляльных прылад, шумных прыбораў і да т.~п., колькасьць шуму становіцца неймаверна вялікая ў~любы час содняў. Гэтая зьява атрымала назву "шумавое забруджваньне"~--- па аналёгіі са сьветлавым, цеплавым, інфармацыйным. Цішыня цяпер становіцца рэсурсам, раскошай, за якую людзі гатовыя плаціць вялікія грошы.
+Цішыня на вагу золата. Чым вышэйшая шчыльнасьць насельніцтва і больш мэханізмаў вакол нас, тым больш і шуму. У сучасным сьвеце, калі шчыльнасьць насельніцтва ўзрастае, шчыльнасьць забудовы расьце, колькасьць аўтамабіляў павялічваецца, зьяўляецца больш гукаўзнаўляльных прылад, шумных прыбораў і да т.~п., колькасьць шуму становіцца неймаверна вялікая ў~любы час содняў. Гэтая зьява атрымала назву ``шумавое забруджваньне''~--- па аналёгіі са сьветлавым, цеплавым, інфармацыйным. Цішыня цяпер становіцца рэсурсам, раскошай, за якую людзі гатовыя плаціць вялікія грошы.
 
 Больш за палову насельніцтва падвяргаюцца рэгулярнаму ўзьдзеяньню шуму вышэй за 55 дэцыбелаў (пры норме да 40). Асноўныя крыніцы шумавога забруджваньня~--- гэта транспарт (аўтамабілі, матацыклы, цягнікі, самалёты), забаўляльныя мерапрыемствы і кавярні, шум ад суседзяў. Часта ўнутры рэстарацыяў, ня кажучы ўжо пра клюбы, гук мацнейшы за норму.
 
@@ -171,7 +171,7 @@
 
 \section{Як змагацца з~шумам}
 
-Самая эфэктыўная мера~--- гэта заканадаўчыя абмежаваньні ды іх выкананьне. Забараняюцца самыя розныя крыніцы шуму, так, у~XVI стагоддзі каралева Брытаніі Лізавета забараніла скандалы і сямейныя сваркі пасьля 22.00, а~ў Швайцарыі і сёньня забаронена пасьля 22.00 карыстацца душам і прыбіральняй. Вы можаце выступіць за ціхую гадзіну ў~вашым доме, прагаласаваць за выкарыстаньне шумапаглынальных пакрыцьцяў у~месцах агульнага карыстаньня, забарону праслухоўваньня гучнай музыкі і да т.~п. Зялёныя зоны ў~горадзе і павелічэньне колькасьці электратранспарту памяншаюць колькасьць шуму.
+Самая эфэктыўная мера~--- гэта заканадаўчыя абмежаваньні ды іх выкананьне. Забараняюцца самыя розныя крыніцы шуму, так, у~XVI стагоддзі каралева Брытаніі Лізавета забараніла скандалы і сямейныя сваркі пасьля 22:00, а~ў Швайцарыі і сёньня забаронена пасьля 22:00 карыстацца душам і прыбіральняй. Вы можаце выступіць за ціхую гадзіну ў~вашым доме, прагаласаваць за выкарыстаньне шумапаглынальных пакрыцьцяў у~месцах агульнага карыстаньня, забарону праслухоўваньня гучнай музыкі і да т.~п. Зялёныя зоны ў~горадзе і павелічэньне колькасьці электратранспарту памяншаюць колькасьць шуму.
 
 Зьмены ў~рамках кватэры варта пачаць з~вымярэньня шуму і выяўленьня яго асноўных крыніц. Замерайце ўзровень шуму ў~асобных памяшканьнях: ваш працоўны габінэт, спальня, дзіцячы пакой. Для гэтага можна выкарыстоўваць адмысловыя праграмы, напрыклад SoundPrint, IHearU або NoiseTube~--- яны ператвараюць смартфон у~шумамер. Вызначыце асноўныя крыніцы шуму ў~вашай кватэры: суседзі, адкрытыя вокны, гучныя электрапрыборы?
 
@@ -193,11 +193,11 @@
 
 Музыка і прадуктыўнасьць. Многім людзям музыка дапамагае сфакусавацца і больш прадуктыўна працаваць. Унівэрсальных рэкамэндацыяў тут няма, галоўнае~--- кіравацца асабістымі перавагамі і экспэрымэнтаваць. У ідэале тып музыкі мусіць адпавядаць тыпу вашае працы. Музыка можа матываваць і паляпшаць агульны настрой. Многім дапамагаюць мэлёдыі для рэляксу, клясычная музыка і да т.~п.
 
-Насалоджвайцеся цішынёй. Цішыня мае тэрапэўтычнае значэньне і зьяўляецца рэсурсам: практыка маўчаньня і захаваньня цішыні распаўсюджаная ў~розных духоўных традыцыях. На Усходзе практыка маўчаньня называецца "маума", Махатма Гандзі прысьвячаў ёй дзень на тыдзень. У горадзе, дзе я вырас, быў манастыр манахаў картэзіянцаў, якія шырока выкарыстоўвалі практыку маўчаньня. Зьняты пра іх жыцьцё фільм так і называўся~--- "Вялікае бязмоўе".
+Насалоджвайцеся цішынёй. Цішыня мае тэрапэўтычнае значэньне і зьяўляецца рэсурсам: практыка маўчаньня і захаваньня цішыні распаўсюджаная ў~розных духоўных традыцыях. На Усходзе практыка маўчаньня называецца ``маума'', Махатма Гандзі прысьвячаў ёй дзень на тыдзень. У горадзе, дзе я вырас, быў манастыр манахаў картэзіянцаў, якія шырока выкарыстоўвалі практыку маўчаньня. Зьняты пра іх жыцьцё фільм так і называўся~--- ``Вялікае бязмоўе''.
 
-Практыка маўчаньня ўключае як адмову ад маўленьня, так і адсутнасьць шумнага асяродзьдзя, а~таксама~--- "цішыню розуму". Цяпер шматлікія з~нас пачуваюцца ў~цішыні некамфортна і імкнуцца заглушыць яе радыё ці тэлевізарам, у~гутарцы зь іншымі мы пазьбягаем паўзаў, запаўняючы іх пустой балбатнёй. Устрыманасьць ад пустых размоваў, ныцьця, крытыкі, скаргаў, парадаў~--- усё гэта трэніруе ўвагу і робіць маўленьне мацнейшым і выразьнейшым.
+Практыка маўчаньня ўключае як адмову ад маўленьня, так і адсутнасьць шумнага асяродзьдзя, а~таксама~--- ``цішыню розуму''. Цяпер шматлікія з~нас пачуваюцца ў~цішыні некамфортна і імкнуцца заглушыць яе радыё ці тэлевізарам, у~гутарцы зь іншымі мы пазьбягаем паўзаў, запаўняючы іх пустой балбатнёй. Устрыманасьць ад пустых размоваў, ныцьця, крытыкі, скаргаў, парадаў~--- усё гэта трэніруе ўвагу і робіць маўленьне мацнейшым і выразьнейшым.
 
-Дасьледаваньні пацьвярджаюць, што дзьве гадзіны поўнай цішыні могуць стымуляваць нэўрагенэз у~гіпакампе і палепшыць кагнітыўныя здольнасьці. Пэрыядычна рабіце «ціхі час» у~офісе~--- устрыманьне ад размоваў і перапіскі~--- гэта дапаможа павысіць прадуктыўнасьць. Дадайце ў~свой дзень моманты цішыні між працай і сустрэчамі, бо, як слушна заўважыў Барыс Пастарнак, "цішыня~--- ты найлепшае з~таго, што я чуў".
+Дасьледаваньні пацьвярджаюць, што дзьве гадзіны поўнай цішыні могуць стымуляваць нэўрагенэз у~гіпакампе і палепшыць кагнітыўныя здольнасьці. Пэрыядычна рабіце «ціхі час» у~офісе~--- устрыманьне ад размоваў і перапіскі~--- гэта дапаможа павысіць прадуктыўнасьць. Дадайце ў~свой дзень моманты цішыні між працай і сустрэчамі, бо, як слушна заўважыў Барыс Пастарнак, ``цішыня~--- ты найлепшае з~таго, што я чуў''.
 
 \subsubsection{Пытаньні і заданьні}
 
@@ -398,11 +398,11 @@
 
 Спэктар сьвятла лямпы. Спэктар бывае бесьперапынным, як у~сонца ці лямпы напальваньня, ці рваным, калі ў~ім некалькі палосаў. Таксама вылучаюць спэктры зь перавагай рознага сьвятла. Большасьць сьвятлодыёдных лямпаў маюць скажоны спэктар зь сінім пікам. Гэта можа нэгатыўна паўплываць як на выпрацоўку мэлятаніну ўвечары, так і парушыць рэгуляцыю працы вока, бо да сіняга сьвятла асабліва адчувальныя гангліёзныя клеткі. У нашай сятчатцы ёсьць адмысловыя гангліянарныя мэлянапсінавыя клеткі, ад іх па рэтынагіпаталамічным шляху ў~гіпаталамус ідзе сыгнал, які кіруе цыркаднымі рытмамі і адказвае рэакцыю звужэньня зрэнак на сьвятло. Гэтыя клеткі ўзбуджаюцца сінім сьвятлом у~480 нм, таму «пік» у~звычайных сьвятлодыёдных лямпах можа зьбіваць наш унутраны гадзіньнік. Найлепшыя сьвятлодыёдныя лямпы сёньня~--- на аснове тэхналёгіі sunlike, іх спэктар бліжэйшы да сонечнага, бяз сіняга піку і правалу чырвонага. Увечары ж карысьнейшыя лямпы напальваньня, яны ня маюць піку сіняга сьвятла і асабліва не замінаюць выпрацоўцы мэлятаніну.
 
-Колеравая тэмпэратура~--- гэта ўспрымальны колер лямпы. 4000К~--- гэта "нэўтральны белы", мякчэйшы жоўты 2700-2800К, а~высокая сьветлавая тэмпэратура вышэй 5500К можа раздражняць і стамляць.
+Колеравая тэмпэратура~--- гэта ўспрымальны колер лямпы. 4000К~--- гэта ``нэўтральны белы'', мякчэйшы жоўты 2700-2800К, а~высокая сьветлавая тэмпэратура вышэй 5500К можа раздражняць і стамляць.
 
 Колераперадача. Ці часта было так, што вы купляеце прыгожую садавіну на рынку, а~на кухні яна выглядае нясмачна? А ваш твар зямлістым? Не сьпяшайцеся вінаваціць сябе ці прадаўцоў, праблема можа быць у~вашым хатнім асьвятленьні. Колераперадача~--- гэта параўнаньне, як выглядаюць адценьні ў~параўнаньні з~сонечным сьвятлом, наколькі раўнамерны ўзровень розных каляровых кампанэнтаў у~сьвятле. У сонца паказьнік колераперадачы 100 (CRI, Ra), а~ў лямпы чым больш CRI, тым лепш. Гэтае значэньне павінна быць пазначанае на ўпакоўцы. Калі CRI ніжэй ці роўны 80, то гэта шкодна, бо адценьні зьліваюцца, а~паніжэньне кантраснасьці ўспрымаецца нашым мозгам як страта рэзкасьці, і гэта змушае нас напружваць цягліцы вачэй, што вядзе да аўтаматычнай напругі вачэй, стамляльнасьці. У мяне стаяць лямпы з~CRI 95 і вышэй, і розьніца са звычайнымі прыкметная.
 
-Пульсацыя лямпы. Чым вышэй пульсацыя лямпы, тым мацнейшая стомленасьць вачэй і горшае агульнае самаадчуваньне. Праверце лямпу праз камэру смартфона, навядзіце камэру на лямпу. Калі вы бачыце палосы ці пульсацыю сьвятла, то такая лямпа можа нэгатыўна ўплываць на вас. Часам на лямпе пазначана "без пульсацыі".
+Пульсацыя лямпы. Чым вышэй пульсацыя лямпы, тым мацнейшая стомленасьць вачэй і горшае агульнае самаадчуваньне. Праверце лямпу праз камэру смартфона, навядзіце камэру на лямпу. Калі вы бачыце палосы ці пульсацыю сьвятла, то такая лямпа можа нэгатыўна ўплываць на вас. Часам на лямпе пазначана ``без пульсацыі''.
 
 Святлодызайн. Найлепшае сьвятло~--- дзённае. Таму аптымальна часьцей быць на вуліцы, абыходзіцца мінімумам штораў, цюляў, фіранак, аб'ёмных расьлінаў, якія засланяюць плынь сьвятла. Чым большыя вокны~--- тым лепш. Можна працаваць ці выходзіць на гаўбец, дах, тэрасу. Часам выкарыстоўваюць сьвятлаводы, каб накіраваць сонечнае сьвятло ўглыб будынкаў. Для лепшага сьвятла ў~памяшканьні часта выкарыстоўваюць камбінацыю розных крыніцаў сьвятла, удома таксама мае сэнс выкарыстоўваць як дзённае, так і вечаровае (ніжняе, зь лямпамі напальваньня) сьвятло. Можна яшчэ выкарыстоўваць для лепшай асьветленасьці і дызайн. Так, у~мяне ў~кватэры~--- белыя сьцены і столь, белая падлога з~глянцавай фарбай. Белыя і гладкія паверхні маюць большы каэфіцыент адлюстраваньня сьвятла, чым цёмныя і шурпатыя. І не выпадкова скандынаўскі дызайн узьнік для таго, каб кампэнсаваць недахоп сьвятла.
 
