--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -45,13 +45,13 @@
 
 З 20 да 70 гадоў сінтэз вітаміну Д у~скуры падае ў~4 разы. У людзей з~залішняй вагой тлушчавая тканіна актыўна паглынае вітамін Д. У Дэлі дэфіцыт вітаміну Д адчувае да 90\,\% жыхароў, і нават Аўстралія так заўзята змагалася з~ракам скуры, што атрымала дэфіцыт вітаміну Д. 
 
-Колькі ж вітаміну Д выпрацоўваецца на сонцы? Для разьліку выкарыстоўваецца складаная формула з~улікам вашага тыпу скуры, вагі, росту, месца пражываньня. Таму лепш скарыстацца праграмамі: Dminder (Android iOS) або SunDay: Vitamin D \& UV Monitor. Яны яшчэ і разьлічваюць бясьпечную для скуры колькасьць сонца для вашай геаграфіі і надвор'я. Калі я ў~плаўках выйду ў~Тайландзе ў~13.00 на пляж бяз крэму (чаго я, вядома, не раблю), то літаральна за 10 хвілін атрымаю 10.000 МЕ вітаміну Д. 
+Колькі ж вітаміну Д выпрацоўваецца на сонцы? Для разьліку выкарыстоўваецца складаная формула з~улікам вашага тыпу скуры, вагі, росту, месца пражываньня. Таму лепш скарыстацца праграмамі: Dminder (Android iOS) або SunDay: Vitamin D \& UV Monitor. Яны яшчэ і разьлічваюць бясьпечную для скуры колькасьць сонца для вашай геаграфіі і надвор'я. Калі я ў~плаўках выйду ў~Тайландзе ў~13:00 на пляж бяз крэму (чаго я, вядома, не раблю), то літаральна за 10 хвілін атрымаю 10.000 МЕ вітаміну Д. 
 
 З дапамогай сонечных ваннаў можна стварыць у~падскурнай клятчатцы вялікі запас вітаміну Д, якога хопіць і на зімовыя месяцы. Але лепш не рызыкаваць~--- і зімой прымаць прафіляктычныя дозы вітаміну. 
 
 Выпрацоўка вітаміну Д адбываецца ў~скуры, ён утвараецца з~7-дэгідрахалестэролу пры ўзьдзеяньні ультрафіялету B (даўжыня хвалі 315-280 нм). Рэцэптары да вітаміну Д ёсьць практычна ўсюды, таму вітамін Д нават завуць гармонам. Ён рэгулюе ня толькі абмен кальцыя, але і ўплывае на рост клетак, сасудаў, выпрацоўку інсуліну, працу імуннай сыстэмы, палавой сыстэмы, актывуе транскрыпцыю каля 200 генаў.
 
-Колькасьць атрыманага ўльтрафіялету вымяраюць у~мінімальных эрытэмных дозах, то бок яго колькасьці, неабходнай для ледзь прыкметнага пачырваненьня скуры. У год для падтрыманьня ўзроўню вітаміну D дастаткова ўсяго 50-60 эрытэмных дозаў. 1 эрітемной доза = 25.000 МЕ вітаміну D. Мінімум сонца~--- гэта чвэрць эрытэмнай дозы: ад 5 да 30 хвілін у~залежнасьці ад геаграфіі, 6-7 раз у~тыдзень на твар, рукі, ногі, з~10.00 да 15.00 у~сярэдніх шыротах. Як бачыце, для атрыманьня вітаміну Д згараць зусім неабавязкова. Праўда, з~сонцам у~зімовыя месяцы будзе крыху цяжкавата.
+Колькасьць атрыманага ўльтрафіялету вымяраюць у~мінімальных эрытэмных дозах, то бок яго колькасьці, неабходнай для ледзь прыкметнага пачырваненьня скуры. У год для падтрыманьня ўзроўню вітаміну D дастаткова ўсяго 50-60 эрытэмных дозаў. 1 эрітемной доза = 25.000 МЕ вітаміну D. Мінімум сонца~--- гэта чвэрць эрытэмнай дозы: ад 5 да 30 хвілін у~залежнасьці ад геаграфіі, 6-7 раз у~тыдзень на твар, рукі, ногі, з~10:00 да 15:00 у~сярэдніх шыротах. Як бачыце, для атрыманьня вітаміну Д згараць зусім неабавязкова. Праўда, з~сонцам у~зімовыя месяцы будзе крыху цяжкавата.
 
 Дадаткі вітаміну D. Калі ваш узровень вітаміну D ніжэй за 30 НГ / мл і вы ня можаце атрымаць дастатковую колькасьць сонца, то ёсьць сэнс прымаць яго дабаўкі. Для прафіляктыкі гіпавітамінозу D у~зімовы час, магчыма, таксама варта ўжываць яго ў~дадатках (але ня больш за 2000 МЕ у~дзень) і хаця б раз у~год вымяраць яго ўзровень у~плазьме крыві. Вітамін D, выпрацаваны ў~скуры, не распадаецца прынамсі ўдвая даўжэй, чым вітамін D у~дадатках. Перадазіроўка вітаміну D за кошт сонечных прамянёў немагчымая. Акрамя сонца і дабавак, невялікія колькасьці вітаміну D можна атрымліваць з~тлустай марской рыбай. Фізычная актыўнасьць павялічвае мабілізацыю вітаміну D з~тлушчу. Але сонца~--- гэта нашмат больш, чым вітамін Д. І замяніць сонца дадаткам немагчыма. Давайце разьбяромся, якія ж ключавыя мэханізмы карыснага дзеяньня сонца.
 
@@ -84,11 +84,11 @@
 
 У сонечнага сьвятла, як і ў~любога іншага эфэктыўнага сродка, ёсьць пабочныя эфэкты. Таму важна бываць на адкрытым паветры, але ня менш важна пазьбягаць залішняга ультрафіялету (УФ).
 
-Бываючы ў~адпачынку, я заўсёды дзіўлюся бестурботнаму стаўленьню да сонца: калі мы вяртаемся з~мора аб 11-й раніцы, шмат хто толькі ідзе загараць. А калі мы зноў ідзём на мора ў~16.00, людзі толькі вяртаюцца. Вядома, загараць у~самы небясьпечны час~--- шкодна.
+Бываючы ў~адпачынку, я заўсёды дзіўлюся бестурботнаму стаўленьню да сонца: калі мы вяртаемся з~мора аб 11-й раніцы, шмат хто толькі ідзе загараць. А калі мы зноў ідзём на мора ў~16:00, людзі толькі вяртаюцца. Вядома, загараць у~самы небясьпечны час~--- шкодна.
 
 Лішак сонечнага сьвятла прыводзіць да паскоранага фотастарэньня скуры, павялічвае рызыку раку скуры, зьяўленьня пігмэнтных плямаў, разьвіцьця дыстрафіі сятчаткі вачэй. Таксама не рэкамэндую загараць у~салярыі. Небясьпека загару яшчэ і ў~тым, што пашкоджаньні скуры назапашваюцца паступова, пачынаючы з~самага дзяцінства, і выяўляюцца пры старэньні. Дасьледаваня блізьнятаў паказалі вырашальны ўплыў ультрафіялету на старэньне скуры.
 
-Пазьбягайце небясьпечнага часу. У гарачых краінах найбольш небясьпечныя гадзіны з~высокім УФ індэксам~--- з~11.30 да 15.30, а~пры вельмі высокім~--- з~10.00 да 17.00. У гэты час варта мінімізаваць знаходжаньне на сонцы або выкарыстоўваць шыракаполы капялюш і насіць адзеньне з~доўгімі рукавамі. Не забывайце, што на нас падае ня толькі прамое, але і адлюстраванае сьвятло, і можна згарэць, расслабляючыся пад парасонам. Калі вы бачыце шмат неба, то, нават знаходзячыся ў~цені, атрымліваеце вялікую дозу ультрафіялету. Пры вельмі яркім сонца носіце сонцаахоўныя акуляры з~УФ-фільтрам, гэта зьнізіць рызыку катаракты і захворваньняў сятчаткі вачэй. Важна пазьбягаць залішняга ультрафіялету, бо пашкоджаньні скуры назапашваюцца паступова і могуць выявіцца толькі ў~старасьці.
+Пазьбягайце небясьпечнага часу. У гарачых краінах найбольш небясьпечныя гадзіны з~высокім УФ індэксам~--- з~11.30 да 15.30, а~пры вельмі высокім~--- з~10:00 да 17:00. У гэты час варта мінімізаваць знаходжаньне на сонцы або выкарыстоўваць шыракаполы капялюш і насіць адзеньне з~доўгімі рукавамі. Не забывайце, што на нас падае ня толькі прамое, але і адлюстраванае сьвятло, і можна згарэць, расслабляючыся пад парасонам. Калі вы бачыце шмат неба, то, нават знаходзячыся ў~цені, атрымліваеце вялікую дозу ультрафіялету. Пры вельмі яркім сонца носіце сонцаахоўныя акуляры з~УФ-фільтрам, гэта зьнізіць рызыку катаракты і захворваньняў сятчаткі вачэй. Важна пазьбягаць залішняга ультрафіялету, бо пашкоджаньні скуры назапашваюцца паступова і могуць выявіцца толькі ў~старасьці.
 
 У прагнозе надвор'я паказваюць ультрафіялетавы індэкс, больш высокія значэньні якога небясьпечныя сонечнымі апёкамі і пашкоджаньнем скуры і вачэй. На колькасьць ультрафіялету ўплываюць розныя фактары: воблачнасьць, смуга, таўшчыня азонавага пласта (чым ён танчэйшы, тым больш ультрафіялету пранікае). Чым вышэй індэкс, тым менш варта быць на сонца.
 
@@ -104,7 +104,7 @@
 
 Абараняйце радзімкі ад сьвятла, беражыце іх ад траўмаваньня рамянямі, абуткам, бюстгальтарам. Пазьбягайце салярыю і сонечных апёкаў. Выдаляючы падазроныя радзімкі, абавязкова трэба праводзіць іх гісталягічнае вывучэньне.
 
-Каратыноіды. Калі чалавек есьць мала гародніны, то ўзімку, а~часам і ўлетку, будзе "нездарова" бледным. Як вядома, колер скуры вызначаецца пераважна трыма пігмэнтамі: гемаглабінам, мэлянінам і каратыноідамі (выключаючы іншыя, рэдкія або паталягічныя пігмэнты). Каратыноіды~--- адны з~маіх любімых злучэньняў, да іх адносяцца бэта-каратын, лікапін, альфа-каратын і ксантафілы, такія як лютэін і зэаксантыін. Каратыноіды граюць важную ролю ў~самых разнастайных працэсах, ад зьяўленьня сардэчна-сасудзістых захворваньняў і ўплыву на працягласьць жыцьця да разьвіцьця катаракты і ўмацаваньня фотаабароны. Фотастарэньне скуры~--- важная праблема, плюс каратыноіды~--- гэта тлушчараспушчальныя злучэньні, таму яны добра працуюць і ў~скуры, і ў~тлушчавай тканцы, і ў~галаўным мозгу. Напрыклад, лютэін абараняе ў~мозгу і сятчатцы Амэга-3 тлустую ДГК ад акісьленьня. 
+Каратыноіды. Калі чалавек есьць мала гародніны, то ўзімку, а~часам і ўлетку, будзе ``нездарова'' бледным. Як вядома, колер скуры вызначаецца пераважна трыма пігмэнтамі: гемаглабінам, мэлянінам і каратыноідамі (выключаючы іншыя, рэдкія або паталягічныя пігмэнты). Каратыноіды~--- адны з~маіх любімых злучэньняў, да іх адносяцца бэта-каратын, лікапін, альфа-каратын і ксантафілы, такія як лютэін і зэаксантыін. Каратыноіды граюць важную ролю ў~самых разнастайных працэсах, ад зьяўленьня сардэчна-сасудзістых захворваньняў і ўплыву на працягласьць жыцьця да разьвіцьця катаракты і ўмацаваньня фотаабароны. Фотастарэньне скуры~--- важная праблема, плюс каратыноіды~--- гэта тлушчараспушчальныя злучэньні, таму яны добра працуюць і ў~скуры, і ў~тлушчавай тканцы, і ў~галаўным мозгу. Напрыклад, лютэін абараняе ў~мозгу і сятчатцы Амэга-3 тлустую ДГК ад акісьленьня. 
 
 Каратыноіды ўбудоўваюцца ў~нашы клеткавыя мэмбраны і абараняюць іх ад пашкоджаньняў свабоднымі радыкаламі, а~таксама цэласнасьць клетак і тканін ад ультрафіялету і ня толькі. Калі такі фізычны мэханізм не спрацаваў, то каратыноіды могуць проста прымаць удар на сябе, акісьляючыся. Агляд дасьледаваньняў пацьвярджае, што людзі, якія ўжываюць дастаткова садавіны і гародніны, багатых каратыноідамі (морква, памідоры, папая), маюць менш паталёгіяў скуры, і іх скура пад дзеяньнем ультрафіялету павольней старэе.
 
@@ -122,12 +122,12 @@
 
 2. Ці выконваеце вы правілы бясьпекі на сонца?
 
-3. Вывучыце свае радзімкі і складзіце "мапу скуры".
+3. Вывучыце свае радзімкі і складзіце ``мапу скуры''.
 
 
 \section{Тэмпэратурнае забруджваньне}
 
-Калі мы глядзім на сябе ў~люстэрка, то, апроч іншага, бачым вынік уплыву тэмпэратуры на наш выгляд: валасы ў~нас растуць у~асноўным толькі на галаве, і ня надта інтэнсіўна~--- на целе. Зразумець, калі продкі чалавека пачалі губляць валасы, цяжка, бо парэшткі не даюць на гэта адказу. На дапамогу прыходзіць вывучэньне ДНК вошай, якія жывуць на галаве і ў~лабковых валасах. Верагодна, 2 мільёны гадоў таму валасы расьлі ўжо не на ўсім целе, а~200 тысячаў гадоў таму нашы продкі сталі насіць адзеньне. Чалавека часам завуць "безвалосай малпай", але пры гэтым забываюць пра прычыны, якія прывялі да гладкай скуры.
+Калі мы глядзім на сябе ў~люстэрка, то, апроч іншага, бачым вынік уплыву тэмпэратуры на наш выгляд: валасы ў~нас растуць у~асноўным толькі на галаве, і ня надта інтэнсіўна~--- на целе. Зразумець, калі продкі чалавека пачалі губляць валасы, цяжка, бо парэшткі не даюць на гэта адказу. На дапамогу прыходзіць вывучэньне ДНК вошай, якія жывуць на галаве і ў~лабковых валасах. Верагодна, 2 мільёны гадоў таму валасы расьлі ўжо не на ўсім целе, а~200 тысячаў гадоў таму нашы продкі сталі насіць адзеньне. Чалавека часам завуць ``безвалосай малпай'', але пры гэтым забываюць пра прычыны, якія прывялі да гладкай скуры.
 
 Прыстасаваньне да высокіх тэмпэратураў. Адна з~тэорый эвалюцыі вястуе: нашы продкі пазбавіліся большай часткі валасоў, каб павысіць эфэктыўнасьць тэрмарэгуляцыі. Вымушана пакінуўшы лес, яны апынуліся пад пякучым сонцам саваны. Вядома, яны ўжо хадзілі на дзьвюх нагах, і гэта дапамагала не перагравацца, бо сумарнае цеплавое ўзьдзеяньне ніжэйшае, калі стаіш. А калі бяжыш, дык яшчэ і ахалоджваесься ветрам. Але нават двухногаму цяжка доўга бегчы на сьпякоце~--- літаральна праз паўгадзіны ён бы пераграваўся і рабіўся здабычай драпежнікаў. Страта валасоў і пяціразовае павелічэньне колькасьці потавых залозаў павысілі эфэктыўнасьць тэрмарэгуляцыі. Гэта забясьпечыла чалавеку дзівосныя магчымасьці і зрабіла яго істотай, якая можа бегчы даўжэй за ўсіх і на вялікіх адлегласьцях абагнаць нават каня.
 
@@ -135,7 +135,7 @@
 
 Ёсьць меркаваньне, што нават аблысеньне ў~мужчынаў зьяўляецца адаптацыяй для лепшага астываньня~--- бо на галаве шмат капіляраў. Па меры росту вусоў і барады плошча для астуджэньня памяншаецца, і прырода кампэнсуе гэта павелічэньнем паверхні голай скуры на макаўцы.
 
-Прыстасаваньне да нізкіх тэмпэратураў. Каля 65 мільёнаў гадоў таму ў~раёне паўвострава Юкатан упаў вялізны мэтэарыт. Яго падзеньне падняло ў~паветра багацьце пылу, які не асядаў гадамі. "Ядзерная зіма" прывяла да выміраньня дыназаўраў і хуткай эвалюцыі млекакормячых. Адным з~мэханізмаў, які дазволіў нашым продкам дамінаваць, быў разьвіты тэрмагенэз (цеплаўтварэньне)~--- здольнасьць цела падтрымліваць пастаянную тэмпэратуру. Так яны атрымалі перавагу ў~эвалюцыйнай гонцы.
+Прыстасаваньне да нізкіх тэмпэратураў. Каля 65 мільёнаў гадоў таму ў~раёне паўвострава Юкатан упаў вялізны мэтэарыт. Яго падзеньне падняло ў~паветра багацьце пылу, які не асядаў гадамі. ``Ядзерная зіма'' прывяла да выміраньня дыназаўраў і хуткай эвалюцыі млекакормячых. Адным з~мэханізмаў, які дазволіў нашым продкам дамінаваць, быў разьвіты тэрмагенэз (цеплаўтварэньне)~--- здольнасьць цела падтрымліваць пастаянную тэмпэратуру. Так яны атрымалі перавагу ў~эвалюцыйнай гонцы.
 
 Некаторыя мэханізмы адаптацыі~--- ужо неэфэктыўныя рудымэнты, напрыклад, гусіная скура. Мурашкі~--- гэта скарачэньне маленькіх цягліцаў у~скуры, якія павінны падымаць валасы пры холадзе (вышэйшы валасяны полаг~--- больш паветра як уцяпляльніка) або агрэсіі (для візуальнага павелічэньня памераў), але валасоў, на жаль, ужо няма.
 
@@ -151,17 +151,17 @@
 
 Цеплавое забруджваньне. Цікава, што мы з~вамі мярзьлівейшыя за сваіх продкаў. Яшчэ 150 гадоў таму нармальная тэмпэратура цела была роўна 37°С, а~сёньня сярэднія значэньні дасягаюць 36,4°С. Сярод прычын гэтага абмяркоўваецца як зьніжэньне колькасьці інфэкцыяў, так і зьніжэньне базавага абмену празь нізкую фізычную актыўнасьць, зьніжэньне тэрмагенэзу праз знаходжаньне ў~пастаянным цеплавым камфорце. Калі раней наш арганізм адаптаваўся для барацьбы зь пераахаладжэньнем, то цяпер нам пагражае пераграваньне.
 
-Сёньня ў~нас зьявілася цёплае адзеньне, мы жывём у~цёплых дамах. Людзі імкнуцца зрабіць сваё жыцьцё гарачэйшым, бо «ад цяплосьці не баляць косьці». Але лішак цяпла шкодзіць здароўю і мае назву "цеплавое забруджваньне". Тэрмастабільнасьць на працягу ўсяго жыцьця дэтрэніруе сыстэмы тэрмарэгуляцыі і мэтабалізму. Чым вышэй тэмпэратура вакол нас, тым вышэй рызыкі парушэньня абмену рэчываў. Навукоўцы ўстанавілі, што павышэньне сярэдняй тэмпэратуры на адзін градус у~год можа выклікаць тысячы выпадкаў захворваньня на дыябэт. Бо ў~пастаянным цяпле зьніжаецца актыўнасьць бурага тлушчу і адчувальнасьць да інсуліну.
+Сёньня ў~нас зьявілася цёплае адзеньне, мы жывём у~цёплых дамах. Людзі імкнуцца зрабіць сваё жыцьцё гарачэйшым, бо «ад цяплосьці не баляць косьці». Але лішак цяпла шкодзіць здароўю і мае назву ``цеплавое забруджваньне''. Тэрмастабільнасьць на працягу ўсяго жыцьця дэтрэніруе сыстэмы тэрмарэгуляцыі і мэтабалізму. Чым вышэй тэмпэратура вакол нас, тым вышэй рызыкі парушэньня абмену рэчываў. Навукоўцы ўстанавілі, што павышэньне сярэдняй тэмпэратуры на адзін градус у~год можа выклікаць тысячы выпадкаў захворваньня на дыябэт. Бо ў~пастаянным цяпле зьніжаецца актыўнасьць бурага тлушчу і адчувальнасьць да інсуліну.
 
-Здаровы тэмпэратурны рэжым дапамагае нам ня толькі мацней спаць, лепш выглядаць, але і падвышае разумовую і фізычную актыўнасьць~--- аж да падаўжэньні жыцьця. Сыстэмы астуджэньня вельмі важныя, у~т.л. і для працы мозгу. Тэмпэратура мозгу рэгулюе актыўнасьць нэрвовай тканкі, мо таму пра чалавека, які рацыянальна разважае, гавораць, што ў~яго "халодная галава".
+Здаровы тэмпэратурны рэжым дапамагае нам ня толькі мацней спаць, лепш выглядаць, але і падвышае разумовую і фізычную актыўнасьць~--- аж да падаўжэньні жыцьця. Сыстэмы астуджэньня вельмі важныя, у~т.л. і для працы мозгу. Тэмпэратура мозгу рэгулюе актыўнасьць нэрвовай тканкі, мо таму пра чалавека, які рацыянальна разважае, гавораць, што ў~яго ``халодная галава''.
 
-Буры тлушч называецца так праз свой колер і выглядае так таму, што ў~клетках яго вельмі шмат мітахондрый з~асаблівым бялком тэрмагенінам (разьяднальны бялок). У бурым тлушчы актыўна ідуць працэсы акісьленьня тлушчаў, толькі ўтварааецца пры гэтым не энэргія для клеткі ў~выглядзе АТФ, а~цеплыня. За год 50 г бурага тлушчу могуць спаліць да 4-5 кг белага тлушчу. Колькасьць бурага тлушчу рэзка зьніжаецца да 40 гадоў: звычайна ў~дарослага чалавека ёсьць усяго 20-30 грамаў актыўнага бурага тлушчу, у~асноўным у~надключычнай вобласьці. Выяўлена, што ў~людзей, якія маюць лішнюю вагу, колькасьць бурага тлушчу зьніжаная, а~яго актыўнасьць прыгнечаная. Пры пэўных умовах (меншая тэмпэратура паветра, вялікая фізычная актыўнасьць) частка клетак звычайнага "белага" тлушчу могуць пачаць паводзіць сябе як бурыя, тады іх называюць "бэжавы тлушч". Актывацыя бурага тлушчу паляпшае абмен рэчываў, абараняе ад дыябэту, паляпшае адчувальнасьць да інсуліну.
+Буры тлушч называецца так праз свой колер і выглядае так таму, што ў~клетках яго вельмі шмат мітахондрый з~асаблівым бялком тэрмагенінам (разьяднальны бялок). У бурым тлушчы актыўна ідуць працэсы акісьленьня тлушчаў, толькі ўтварааецца пры гэтым не энэргія для клеткі ў~выглядзе АТФ, а~цеплыня. За год 50 г бурага тлушчу могуць спаліць да 4-5 кг белага тлушчу. Колькасьць бурага тлушчу рэзка зьніжаецца да 40 гадоў: звычайна ў~дарослага чалавека ёсьць усяго 20-30 грамаў актыўнага бурага тлушчу, у~асноўным у~надключычнай вобласьці. Выяўлена, што ў~людзей, якія маюць лішнюю вагу, колькасьць бурага тлушчу зьніжаная, а~яго актыўнасьць прыгнечаная. Пры пэўных умовах (меншая тэмпэратура паветра, вялікая фізычная актыўнасьць) частка клетак звычайнага ``белага'' тлушчу могуць пачаць паводзіць сябе як бурыя, тады іх называюць ``бэжавы тлушч''. Актывацыя бурага тлушчу паляпшае абмен рэчываў, абараняе ад дыябэту, паляпшае адчувальнасьць да інсуліну.
 
 Разьяднальныя бялкі (UCP) знаходзяцца на мэмбране мітахондрый і спрыяюць таму, што назапашаная ў~выглядзе розьніцы патэнцыялаў энэргія сыходзіць у~цеплыню, г.~зн. разьядноўваюць акісьленьне і фасфараляваньне. Падобныя выдаткі аказваюцца вельмі карыснымі для арганізма.
 
 Аказалася, што UCP-1 у~бурай тлушчавай тканцы спрыяе падтрыманьню нармальнай вагі (паляпшаючы адчувальнасьць да інсуліну, павялічваючы тлушчаспаленьне і інш.), UCP-2 у~гіпакампе паляпшае нэўрагенэз і нэўраплястычнасьць, а~ў гіпаталамусе~--- уплывае на агульны ўзровень мэтабалізму і падаўжае жыцьцё. UCP-2 таксама абараняе ад лішку актыўных формаў кіслароду (АФК), а~UCP-3 у~цягліцах паляпшае эфэктыўнасьць тлушчаспаленьня пры фізычнай актыўнасьці.
 
-Разьяднальныя бялкі ёсьць ня толькі ў~бурым і бэжавым тлушчы, іх шмат у~печані, у~цягліцах, сэрцы і ў~іншых тканках. Холад, фізычная актыўнасьць, пэўны рэжым харчаваньня і прадукты~--- безь перакусаў і без высокавугляводаў ежы~--- павялічваюць колькасьць разьяднальных бялкоў. Навуковец Джон Спікмэн высунуў ідэю, што колькасьць разьяднальных бялкоў, якія зьніжаюць утварэньне актыўных формаў кіслароду, грае ключавую ролю ў~падаўжэньні жыцьця. Гэтая тэорыя таксама носіць назву "разьяднай і выжывай" (Uncoupling-to-Survive) і вястуе, што чым вышэй хуткасьць мэтабалізму і чым больш разьяднальных бялкоў, тым лепшая праца мітахондрый і большая працягласьць жыцьця.
+Разьяднальныя бялкі ёсьць ня толькі ў~бурым і бэжавым тлушчы, іх шмат у~печані, у~цягліцах, сэрцы і ў~іншых тканках. Холад, фізычная актыўнасьць, пэўны рэжым харчаваньня і прадукты~--- безь перакусаў і без высокавугляводаў ежы~--- павялічваюць колькасьць разьяднальных бялкоў. Навуковец Джон Спікмэн высунуў ідэю, што колькасьць разьяднальных бялкоў, якія зьніжаюць утварэньне актыўных формаў кіслароду, грае ключавую ролю ў~падаўжэньні жыцьця. Гэтая тэорыя таксама носіць назву ``разьяднай і выжывай'' (Uncoupling-to-Survive) і вястуе, што чым вышэй хуткасьць мэтабалізму і чым больш разьяднальных бялкоў, тым лепшая праца мітахондрый і большая працягласьць жыцьця.
 
 \subsubsection{Пытаньні і заданьні}
 
@@ -184,7 +184,7 @@
 
 Паветраныя ванны. Апранайце менш лішняга адзеньня дома і на вуліцы: вы ідэальна апранутыя, калі вам халодна стаяць, але цёпла ісьці. Тэмпература 18-20 градусаў спрыяе падтрыманьню цяглічнага тонусу.
 
-Вы можаце рабіць зарадку з~адкрытымі вокнамі і галяком~--- адсутнасьць адзеньня ўзмацняе цеплааддачу. Паводле словаў Уладзіміра Маякоўскага: "Няма на сьвеце прыгажэйшага адзеньня, чым бронза мускулаў і сьвежасьць скуры". Бэнджамін Франклін заўсёды пачынаў свае дні з~паветраных ваннаў: на працягу паўгадзіны кожны дзень ён сядзеў перад разнасцежаным акном галяком, чытаючы, робячы запісы, разважаючы. Сон у~прахалодзе паляпшае мэтабалічныя паказьнікі нават здаровых людзей: мерзнуць ня трэба, спіце пад коўдрай і ўдыхайце прахалоднае паветра.
+Вы можаце рабіць зарадку з~адкрытымі вокнамі і галяком~--- адсутнасьць адзеньня ўзмацняе цеплааддачу. Паводле словаў Уладзіміра Маякоўскага: ``Няма на сьвеце прыгажэйшага адзеньня, чым бронза мускулаў і сьвежасьць скуры''. Бэнджамін Франклін заўсёды пачынаў свае дні з~паветраных ваннаў: на працягу паўгадзіны кожны дзень ён сядзеў перад разнасцежаным акном галяком, чытаючы, робячы запісы, разважаючы. Сон у~прахалодзе паляпшае мэтабалічныя паказьнікі нават здаровых людзей: мерзнуць ня трэба, спіце пад коўдрай і ўдыхайце прахалоднае паветра.
 
 Гартаваньне актыўна ўжываецца ў~шматлікіх дзіцячых садах, школах і выхаваўчых установах як сродак умацаваньня здароўя: носім шорты, прымаем халодны душ, пакідаем адкрытыя вокны ў~спальнях. Дасьледаваньні паказалі, што тэмпэратура ў~доме 19 градусаў прыводзіць да павелічэньня актыўнасьці бурага тлушчу да 40\,\%, што спрыяе лепшаму абмену і пахудзеньню!
 
@@ -288,7 +288,7 @@
 
 Дасьледаваньні мікрафлёры ў~блізьнятаў паказалі, што тыя зь іх, у~каго меншая разнастайнасьць мікрафлёры, маюць і большую вагу. Дастатковая колькасьць разнастайнай цэльнай умерана апрацаванай расьліннай ежы~--- адна з~найважнейшых умоваў падтрыманьня здаровай мікрафлёры. Тэрмічна апрацаваная гародніна ня горшая, а~часьцяком і лепшая за сырую для здароўя мікрафлёры. Памятайце і пра ўмеранасьць: чым больш і часьцей мы ямо, тым горшая ўзгодненасьць працы нашай мікрафлёры.
 
-Разнастайнасьць харчаваньня~--- ключ да разнастайнасьці бактэрыяў. Адны віды бактэрыяў могуць есьці розныя валокны, а~некаторыя вельмі пераборлівыя. Павялічваючы колькасьць іх "любімай" ежы, мы павялічваем і іх канцэнтрацыю ў~страўніку. Напрыклад, бактэрыя Bacteroides thetaiotaomicron аддае перавагу гароху. Станоўча на мікрафлёру дзейнічаюць напоі: зялёная гарбата, какава, цукора. Напрыклад, эпігалакатэхін, які маецца ў~зялёнай гарбаце, павялічвае колькасьць бактэрыяў Flavonifractor plautii зь сямейства Clostridia, што могуць здымаць запаленьне і нават спрыяць зьніжэньню вагі. Яны прыгнятаюць імунны адказ Т-хэлпэраў на харчовыя алергены. Таксама зялёная гарбата спрыяе і росту іншых відаў карысных бактэрыяў.
+Разнастайнасьць харчаваньня~--- ключ да разнастайнасьці бактэрыяў. Адны віды бактэрыяў могуць есьці розныя валокны, а~некаторыя вельмі пераборлівыя. Павялічваючы колькасьць іх ``любімай'' ежы, мы павялічваем і іх канцэнтрацыю ў~страўніку. Напрыклад, бактэрыя Bacteroides thetaiotaomicron аддае перавагу гароху. Станоўча на мікрафлёру дзейнічаюць напоі: зялёная гарбата, какава, цукора. Напрыклад, эпігалакатэхін, які маецца ў~зялёнай гарбаце, павялічвае колькасьць бактэрыяў Flavonifractor plautii зь сямейства Clostridia, што могуць здымаць запаленьне і нават спрыяць зьніжэньню вагі. Яны прыгнятаюць імунны адказ Т-хэлпэраў на харчовыя алергены. Таксама зялёная гарбата спрыяе і росту іншых відаў карысных бактэрыяў.
 
 Бабовыя ўтрымліваюць шмат харчовых валокнаў і дабратворна ўплываюць на мікрафлёру. Павелічэньне колькасьці гародніны (капуста, цыбуля, батат, гарбуз, бурак, артышок і да т.~п.), зеляніны, грыбоў, водарасьцяў, гарэхаў, садавіны, ягадаў забясьпечыць дастатковую колькасьць клятчаткі ды іншых прэбіётыкаў. Фастынг у~розных формах паляпшае мікрафлёру, павялічваючы колькасьць карысных бактэрыяў і зьмяншаючы аб'ём шкодных.
 
@@ -362,7 +362,7 @@
 
 Выкарыстоўвайце біядызайн: глядзіце на аблокі, запаліце камін, пагуляйце на прыродзе. Азеляненьне, парк, лес, дрэвы~--- усё гэта вельмі дабратворна ўплывае на нас, фармуючы карыснае і аздараўленчае асяродзьдзе. Узровень азеляненьня~--- адзін з~надзейных, але дарагіх спосабаў падтрыманьня кагнітыўнага здароўя. Чым больш зеляніны, тым лепш разьвіцьцё мозгу ў~школьнікаў і тым павольней падзеньне кагнітыўных функцый у~старых. Азеляненьне на 15\,\% зьніжае рызыку нэўрадэгенэратыўных захворваньняў.
 
-Пагуляйце па лесе. Дабратворны ўплыў прагулак па лесе або парку на стан здароўя чалавека пачаў вывучацца як навуковы фэномэн з~80-х гадоў XX стагодзьдзя. Калі раней людзі проста бралі заплечнік і сыходзілі ў~паход, цяпер прыдумалі больш адмысловых тэрмінаў. Першымі тут былі японцы, якія ўвялі тэрмін сінрын-ёку~--- "лясныя ванны", цяпер кажуць пра "дэндратэрапію", "спа-лес", Park Rx і інш. Можна выдатна спалучаць дзелавую сустрэчу, чытаньне або шпацыр з~дзецьмі ў~парку. Гэта станоўча ўзьдзейнічае на ваш мозг і ваша цела, не патрабуе напругі і заўсёды даступна.
+Пагуляйце па лесе. Дабратворны ўплыў прагулак па лесе або парку на стан здароўя чалавека пачаў вывучацца як навуковы фэномэн з~80-х гадоў XX стагодзьдзя. Калі раней людзі проста бралі заплечнік і сыходзілі ў~паход, цяпер прыдумалі больш адмысловых тэрмінаў. Першымі тут былі японцы, якія ўвялі тэрмін сінрын-ёку~--- ``лясныя ванны'', цяпер кажуць пра ``дэндратэрапію'', ``спа-лес'', Park Rx і інш. Можна выдатна спалучаць дзелавую сустрэчу, чытаньне або шпацыр з~дзецьмі ў~парку. Гэта станоўча ўзьдзейнічае на ваш мозг і ваша цела, не патрабуе напругі і заўсёды даступна.
 
 Як заўважыў пісьменьнік Робэрт Стывэнсан, «Лес чаруе сэрцы людзей ня столькі сваёй прыгажосьцю, колькі цудоўным паветрам, эманацыяй старых дрэваў, нечым няўлоўным, што так цудоўна зьмяняе і аднаўляе стомлены дух».
 
@@ -370,13 +370,13 @@
 
 Глядзіце на аблокі. Воблачная мэдытацыя~--- гэта ідэальная практыка. Аблокі прыгожыя і дзівосна чароўныя: ніколі ў~жыцьці мы ня бачым аднолькавых аблокаў, і кожны позірк у~неба ўнікальны. Заўважыць рух аблокаў і зьмена іх формы~--- ужо значыць досыць запаволіцца для рэляксацыі. Аблокі~--- гэта дафамін і крэатыўнасьць, калі мы знаходзім у~іх знаёмыя фігуры і падбіраем асацыяцыі. Гэта яшчэ і паднятая ўверх галава, што аўтаматычна паляпшае вашу паставу і настрой. З маіх любімых фракталаў~--- полымя, так расслабляе вогнішча на прыродзе або полымя каміна.
 
-Жывіце сярод прыгожай архітэктуры. Амэрыканскі архітэктар Луіс Генры Салівэн сцьвярджаў, што "Архітэктура~--- гэта мастацтва, якое ўзьдзейнічае на чалавека найбольш павольна, затое найбольш трывала". Праблема дрэнных будынкаў таксама вельмі вялікая~--- яны вельмі павольна разбураюцца. 
+Жывіце сярод прыгожай архітэктуры. Амэрыканскі архітэктар Луіс Генры Салівэн сцьвярджаў, што ``Архітэктура~--- гэта мастацтва, якое ўзьдзейнічае на чалавека найбольш павольна, затое найбольш трывала''. Праблема дрэнных будынкаў таксама вельмі вялікая~--- яны вельмі павольна разбураюцца. 
 
 Дасьледнікі хочуць ператварыць нешта няпэўнае~--- «фэнамэналёгію гарадзкой архітэктуры»~--- у~навуковыя факты нэўрабіялёгіі, вынікі якіх змогуць выкарыстоўваць дызайнэры і архітэктары. Навукоўцы ўпэўненыя, што «сузіральная архітэктура» можа зь цягам часу выклікаць такі ж карысны для здароўя эфэкт, што і мэдытацыя, але без намаганьняў чалавека.
 
 Наш мозг насалоджваецца прапорцыямі, фракталамі і лініямі. Калі вы хочаце запаволіцца~--- знайдзіце самы прыўкрасны будынак у~вашым горадзе і дайце вачам магчымасьць атрымаць асалоду ад яго. Дасьледаваньне з~дапамогай МРТ дазволіла ўбачыць адрозьненьні ў~сузіраньні розных будынкаў і ацаніць мазгавы водгук на іх: разглядваньне архітэктурных шэдэўраў зьмяняе мэнтальнасьць чалавека, выклікаючы стан, блізкі да мэдытатыўнага. Чым больш у~будынку выкарыстана залатое сячэньне, тым лепш яно ўспрымаецца.
 
-Азеляняйце пакой. Дасьледаваньні ўсталявалі, што хворым трэба менш абязбольвальных і яны хутчэй папраўляюцца, калі з~акна іх палаты відаць дрэвы. Пазьнейшыя працы паказалі, што дастаткова глядзець нават на фатаграфію прыроды. Разгляданьне жывых кветак расслабляе, зьніжае ўзровень стрэсу, павышае тонус антыстрэсавай парасімпатыйнай сыстэмы. Працуюць і асобныя элемэнты прыроднага асяродзьдзя: сьпевы птушак, расьліны, водары, гукі прыроды і г.д. У зялёных офісах супрацоўнікі ня толькі лепей пачуваюцца, але й хутчэй прымаюць рашэньні. Фітадызайн дапаможа ўкараніць расьліны ў~ваша жыцьцё найболей зручным спосабам. Напрыклад, існуюць спэцыяльныя "зялёныя сьцены" з~аўтаматызаваным палівам. Калі не атрымліваецца хадзіць у~лес, можна зрабіць лес у~сябе дома!
+Азеляняйце пакой. Дасьледаваньні ўсталявалі, што хворым трэба менш абязбольвальных і яны хутчэй папраўляюцца, калі з~акна іх палаты відаць дрэвы. Пазьнейшыя працы паказалі, што дастаткова глядзець нават на фатаграфію прыроды. Разгляданьне жывых кветак расслабляе, зьніжае ўзровень стрэсу, павышае тонус антыстрэсавай парасімпатыйнай сыстэмы. Працуюць і асобныя элемэнты прыроднага асяродзьдзя: сьпевы птушак, расьліны, водары, гукі прыроды і г.д. У зялёных офісах супрацоўнікі ня толькі лепей пачуваюцца, але й хутчэй прымаюць рашэньні. Фітадызайн дапаможа ўкараніць расьліны ў~ваша жыцьцё найболей зручным спосабам. Напрыклад, існуюць спэцыяльныя ``зялёныя сьцены'' з~аўтаматызаваным палівам. Калі не атрымліваецца хадзіць у~лес, можна зрабіць лес у~сябе дома!
 
 Некамфортнае візуальнае асяродзьдзе. Калі мы бачым нешта непрыемнае, то хочацца заплюшчыць вочы, каб паберагчы свае нэрвовыя клеткі. І гэта нядзіўна, бо тое, што мы бачым, уплывае на нашае здароўе. Прычым ня толькі ў~такога адчувальна віду, як чалавек,~--- нават у~мух. Мухі рэагуюць на прысутнасьць мёртвых мух у~іх полі зроку. Нават пасіўная прысутнасьць мёртвых мух кароціць ім жыцьцё, а~вось даданьне антыдэпрэсанту перадухіляе заўчасную сьмерць.
 
