--- a/willpower/chapter5.tex
+++ b/willpower/chapter5.tex
@@ -117,7 +117,7 @@
 
 Сядзеньне звыш 4-6 гадзінаў на дзень наносіць нам шкоду, якая толькі часткова кампэнсуецца фізычнымі практыкаваньнямі. У выніку працяглага сядзеньня ў~цягліцах на 90\,\% памяншаецца актыўнасьць фэрмэнту ліпапратэінліпазы, якая расшчапляе тлушчы. Кароткая і сярэдняя працягласьць нагрузкі істотна не ўплывае на гэты працэс. Галоўная задача~--- скарачаць час, праведзены ў~становішчы седзячы: падлічыць, колькі гадзінаў на дзень вы седзіце, жахнуцца гэтаму і скласьці плян па скарачэньні гэтага часу.
 
-Што рабіць? Першая ідэя~--- устаць. Нашы продкі садзіліся толькі для адпачынку, калі стамляліся. Многія доўгажыхары, хоць і не займаюцца спэцыяльна спортам, цэлы дзень знаходзяцца ў~руху і амаль не сядзяць. Карысна частку сядзячай працы перанесьці "на ногі" і пачаць працаваць стоячы. У гэтым няма нічога незвычайнага: яшчэ нядаўна людзі працавалі стоячы, за канторкамі. Калі мы працуем стоячы, у~нас задзейнічаныя буйныя групы цягліц, а~нагрузка на сьпіну ў~два разы меншая ў~параўнаньні зь сядзеньнем.
+Што рабіць? Першая ідэя~--- устаць. Нашы продкі садзіліся толькі для адпачынку, калі стамляліся. Многія доўгажыхары, хоць і не займаюцца спэцыяльна спортам, цэлы дзень знаходзяцца ў~руху і амаль не сядзяць. Карысна частку сядзячай працы перанесьці ``на ногі'' і пачаць працаваць стоячы. У гэтым няма нічога незвычайнага: яшчэ нядаўна людзі працавалі стоячы, за канторкамі. Калі мы працуем стоячы, у~нас задзейнічаныя буйныя групы цягліц, а~нагрузка на сьпіну ў~два разы меншая ў~параўнаньні зь сядзеньнем.
 
 Цяпер існуе вялікая колькасьць сталоў і спэцыяльных падставак для працы стоячы~--- вы можаце выбраць на свой густ. Галоўнае~--- сачыце за базавай эрганомікай. Праца стоячы спальвае на 1,36 кілакалёрыяў у~хвіліну больш, чым сядзеньне. Гэта амаль 80 дадатковых калёрыяў у~гадзіну. Стаяньне на працягу дзьвюх гадзінаў на 2\,\% зьніжае ўзровень глюкозы ў~крыві і на 11\,\%~--- узровень трыгліцерыдаў. Становішча стоячы~--- гэта больш моцная поза, таму мы лепей трываем стрэс і падвышаем прадуктыўнасьць, бо пракрастынаваць стоячы нашмат складаней.
 
@@ -279,7 +279,7 @@
 
 Таксама папулярны красфіт~--- камбінацыя элемэнтаў як ВІІТ, так і сілавых відаў спорту, бегу і да т.~п. У яго аснове ляжаць разнастайныя функцыянальныя рухі, якія выконваюцца з~высокай інтэнсіўнасьцю. Зрэшты, некаторыя дасьледнікі асьцерагаюцца, што шматлікія праграмы красфіту могуць быць небясьпечныя для здароўя.
 
-Прыклад практыкаваньняў: 20-сэкундыя спрынты ў~спалучэньні з~60-сэкунднай хадзьбой ці бегам трушком. ВІІТ на велатрэнажоры: вы 30 сэкундаў круціце пэдалі, максімальна выкладваючыся, затым 60 сэкундаў~--- вельмі павольна, аднаўляючыся. У такім рэжыме можна рабіць бэрпі, бег ва ўпоры лежачы, заскокваньні на плятформу, практыкаваньні "зорка" (jumping jacks), "скалалаз", скачкі "ўнутр-вонкі".
+Прыклад практыкаваньняў: 20-сэкундыя спрынты ў~спалучэньні з~60-сэкунднай хадзьбой ці бегам трушком. ВІІТ на велатрэнажоры: вы 30 сэкундаў круціце пэдалі, максімальна выкладваючыся, затым 60 сэкундаў~--- вельмі павольна, аднаўляючыся. У такім рэжыме можна рабіць бэрпі, бег ва ўпоры лежачы, заскокваньні на плятформу, практыкаваньні ``зорка'' (jumping jacks), ``скалалаз'', скачкі ``ўнутр-вонкі''.
 
 Нават 3-7-10 хвілінныя трэніроўкі карысныя. Але каб яны працавалі, яны павінны быць высокаінтэнсіўнымі, інтэрвальнымі, задзейнічаць буйныя цягліцы ўсяго цела, уключаць сілавыя і аэробныя практыкаваньні. Выкарыстоўвайце шматсустаўныя базавыя практыкаваньні з~высокай энэргаёмістасьцю і не рабіце высокаінтэнсіўны раўнд даўжэй за 30 сэкундаў. 
 
