--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -217,11 +217,11 @@
 
 Прынцып сымэтрычнасьці аднаўленьня. Чым большыя нагрузкі, тым глыбей і даўжэй мусіць быць аднаўленьне. Часта адпачынкам можа быць пераключэньне тыпу дзейнасьці: гэта пераключае і дамінантныя нэрвовыя цэнтры.
 
-Распазнаваньне зьнясіленьня. Антыстрэсавы рэжым пачынаецца з~уменьня пачынаць адпачываць раней, чым стомісься, бо калі разьвіваецца зьнясіленьне~--- гэта прыводзіць да таго, што аслабляецца праца прэфрантальнай кары, узмацняецца актыўнасьць мігдаліны, мы рэагуем аўтаматычна і губляем самакантроль. Важна навучыцца распазнаваць свае самыя раньнія прыкметы стомленасьці. Напрыклад, вам хочацца «ўзбадзёрыцца», хочацца салодкага-тлустага-салёнага, ёсьць патрэба ў~каве і стымулятарах, цягне пракрастынаваць, зьяўляецца пачуцьцё страты кантролю, разьюшваюць дробязі. Прыходзяць думкі стрэсу: «Чаму я? Гэта ўжо занадта! Мне павінна быць сорамна, я ніколі не змагу гэта зрабіць». А таксама словы "заўсёды", "я вінаваты", "усе яны", "пастаянна", "цалкам". Узьнікаюць адчуваньні загнанасьці, безвыходнасьці, перагрузкі, ціску, пратэсту, непрыманьня. А якія ў~вас самыя раньнія прыкметы стомленасьці?
+Распазнаваньне зьнясіленьня. Антыстрэсавы рэжым пачынаецца з~уменьня пачынаць адпачываць раней, чым стомісься, бо калі разьвіваецца зьнясіленьне~--- гэта прыводзіць да таго, што аслабляецца праца прэфрантальнай кары, узмацняецца актыўнасьць мігдаліны, мы рэагуем аўтаматычна і губляем самакантроль. Важна навучыцца распазнаваць свае самыя раньнія прыкметы стомленасьці. Напрыклад, вам хочацца «ўзбадзёрыцца», хочацца салодкага-тлустага-салёнага, ёсьць патрэба ў~каве і стымулятарах, цягне пракрастынаваць, зьяўляецца пачуцьцё страты кантролю, разьюшваюць дробязі. Прыходзяць думкі стрэсу: «Чаму я? Гэта ўжо занадта! Мне павінна быць сорамна, я ніколі не змагу гэта зрабіць». А таксама словы ``заўсёды'', ``я вінаваты'', ``усе яны'', ``пастаянна'', ``цалкам''. Узьнікаюць адчуваньні загнанасьці, безвыходнасьці, перагрузкі, ціску, пратэсту, непрыманьня. А якія ў~вас самыя раньнія прыкметы стомленасьці?
 
 Дзённы рэсурс прэфрантальнай кары ў~нас абмежаваны, таму стрэсаўстойлівасьць~--- велічыня непастаянная, і ў~выніку стомленасьці ўзьнікае раздражняльнасьць, імпульсіўнасьць, схільнасьць да спакусаў і інш. Памятайце, што пераначуем~--- болей пачуем, плянуйце важныя справы на дні бяз моцных нагрузак, для самых важных ладзьце «прэфрантальныя панядзелкі», калі вы на максімуме сваіх сіл. Першая палова дня, першая палова тыдня, час пасьля адпачынку, пасьля фізычнае актыўнасьці, як правіла, зьвязаныя з~большай стрэсаўстойлівасьцю.
 
-Рабіце перапынкі. Паўзы~--- гэта нашая магчымасьць, мэтафарычна кажучы, "завастрыць сякеру" або "навастрыць касу". Тыя, хто рабіў такія перапынкі, заканчвалі свой дзень у~больш добрым настроі. Чым цяжэйшая праца, тым больш эфэктыўныя такія невялікія паўзы. Што вы робіце падчас перапынку~--- ня так ужо важна, галоўнае, каб вы сябе да гэтага не прымушалі і вам падабалася тое, чым вы займаецеся.
+Рабіце перапынкі. Паўзы~--- гэта нашая магчымасьць, мэтафарычна кажучы, ``завастрыць сякеру'' або ``навастрыць касу''. Тыя, хто рабіў такія перапынкі, заканчвалі свой дзень у~больш добрым настроі. Чым цяжэйшая праца, тым больш эфэктыўныя такія невялікія паўзы. Што вы робіце падчас перапынку~--- ня так ужо важна, галоўнае, каб вы сябе да гэтага не прымушалі і вам падабалася тое, чым вы займаецеся.
 
 Навукова ўстаноўлена, што перапынак у~працы ў~першай палове дня карысьнейшы для прадуктыўнасьці, чым у~сярэдзіне ці канцы дня. Таксама было даведзена, што шмат кароткіх перапынкаў нашмат больш эфэктыўныя, чым адзін працяглы. Некаторыя дасьледаваньні паказваюць, што пры навучаньні новаму навыку неабходныя паўзы, роўныя часу навучаньня. 10 хвілінаў пазаймаліся? 10 хвілінаў і адпачывайце.
 
@@ -243,11 +243,11 @@
 
 Межы~--- гэта мінімальныя і максімальныя адрэзкі часу, якія мы ўсталёўваем для сваіх справаў. Напрыклад, мінімум трэніровачнай актыўнасьці на тыдзень, максімум часу на адзін праект. Гэта важна, бо, як вядома, «праца займае час, адпушчаны на яе». Межы дапамагаюць пераадолець пачуцьцё сьпешкі, таму стварайце сабе прастору, дзе вы будзеце пачувацца ў~раскошы часу і сіл. Калі мы не пільнуем межаў і сыходзім ад сваіх мэтаў, гэта можа прывесьці да нездаровых наступстваў і пропуску магчымасьцяў. Як звычайна, рэжым~--- перадусім!
 
-Згадайце, як у~фільме «Зьзяньне» герой Джэка Нікалсана бесьперапынна набіраў на друкарцы фразу "All work and no play makes Jack a dull boy" (Пастаянная праца без забаваў робіць Джэка нудным хлопцам).
+Згадайце, як у~фільме «Зьзяньне» герой Джэка Нікалсана бесьперапынна набіраў на друкарцы фразу ``All work and no play makes Jack a dull boy'' (Пастаянная праца без забаваў робіць Джэка нудным хлопцам).
 
 Усталёўвайце прыярытэты. Прэфрантальная кара працуе лепш, калі ў~нас выразна зададзеныя прыярытэты, інакш любая ўваходная інфармацыя будзе мець для мозгу аднолькавую важнасьць. Чым лепш мы бачым свае мэты, тым менш адцягваемся, застаёмся ўстойлівейшымі да стрэсаў і лепш працуем.
 
-Перад працай выразна пагаварыце пра сябе, чым канкрэтна вы зьбіраецеся займацца: "Што я зараз буду рабіць і навошта?" Калі цяжка сказаць адразу, дык варта засяродзіцца і сфармуляваць.
+Перад працай выразна пагаварыце пра сябе, чым канкрэтна вы зьбіраецеся займацца: ``Што я зараз буду рабіць і навошта?'' Калі цяжка сказаць адразу, дык варта засяродзіцца і сфармуляваць.
 
 Вельмі важна мець у~жыцьці вялікія мэты і ясныя прыярытэты, бо нашая стрэсавая сыстэма калібруецца ў~залежнасьці ад выстаўленых задач. Калі ў~вас у~жыцьці ёсьць вялізная важная задача, то ў~параўнаньні зь ёю значнасьць бытавых стрэсаў цьмянее, і яны не здаюцца сур'ёзнымі. Калі такіх мэтаў няма, то нават дробязі будуць лёгка чапляць і выводзіць зь сябе.
 
@@ -505,11 +505,11 @@
 
 Шанцунак. Кожны дзень па ўсім сьвеце людзі пачынаюць мноства праектаў, але толькі малая частка зь іх становіцца пасьпяховымі. Гэта здаецца дзіўным, бо вакол нас мноства пасьпяховых бізнэсаў, якія, як бачыцца збоку, можна лёгка ўзяць і скапіяваць, шмат гатовых сакрэтаў посьпеху, шмат схэмаў, плянаў і стратэгій~--- бяры і рабі. Чаму ж гэта не працуе? Адказ заключаецца ў~асаблівасьцях працы мозгу прыдакаў і няўдакаў. Тое, як працуе вашая зьвіліна поясу, уплывае на пасьпяховасьць і шанцунак, незалежна ад узроўню адукацыі, матывацыі або стартавага капіталу. 
 
-Прафэсар Рычард Вайсман на працягу шматлікіх гадоў вывучаў, як працуе мозг людзей, якія лічаць сябе прыдакамі і няўдакамі. Напрыклад, ён раздаваў паддосьледным газэту і прасіў іх падлічыць колькасьць фатаграфій у~ёй. На другой старонцы газэты было вялікімі літарамі надрукавана, што ў~газэце 43 фатаграфіі, можна далей не чытаць. У іншых досьледах устаўлялі надпіс: "Калі вы гэта чытаеце, то скажыце экспэрымэнтатарам, і атрымаеце 250 фунтаў". Прыдачыкі заўважалі гэтыя надпісы, спыняліся і атрымлівалі сумы грошай, а~вось няўдакі працягвалі лічыць усе фатаграфіі да самага канца газэты і прапускалі фінансавую прапанову.
+Прафэсар Рычард Вайсман на працягу шматлікіх гадоў вывучаў, як працуе мозг людзей, якія лічаць сябе прыдакамі і няўдакамі. Напрыклад, ён раздаваў паддосьледным газэту і прасіў іх падлічыць колькасьць фатаграфій у~ёй. На другой старонцы газэты было вялікімі літарамі надрукавана, што ў~газэце 43 фатаграфіі, можна далей не чытаць. У іншых досьледах устаўлялі надпіс: ``Калі вы гэта чытаеце, то скажыце экспэрымэнтатарам, і атрымаеце 250 фунтаў''. Прыдачыкі заўважалі гэтыя надпісы, спыняліся і атрымлівалі сумы грошай, а~вось няўдакі працягвалі лічыць усе фатаграфіі да самага канца газэты і прапускалі фінансавую прапанову.
 
-Фактар посьпеху зьвязаны з~тым, што ўдачлівыя людзі маюць нашмат шырэйшы фокус увагі і не зацыкліваюцца на бягучым заданьні. Гэта дазваляе ім быць гнуткімі, хутка перабудоўвацца і аптымальным чынам выкарыстаць наяўныя рэсурсы. Удачлівыя людзі часьцей імкнуцца да нявызначанасьці і з~задавальненьнем спрабуюць новае і нязвыклае, пашыраюць сваё камунікатыўнае кола. Цікава, але прыдакі і пасьпяховыя людзі часьцей, чым няўдакі, памыляюцца, але вельмі хутка аднаўляюцца пасьля памылак. У няўдакаў фокус увагі вельмі вузкі, яны ігнаруюць і не заўважаюць нічога, акрамя іх бягучага заданьня. Такая фіксацыя робіць іх трывожнымі, зацыкленымі, мэтай іх дзеяньняў становіцца пазьбяганьне памылак. Яны пагарджаюць альтэрнатыўнымі магчымасьцямі і ня могуць зьмяніць свае паводзіны, адмаўляюцца ад усяго нязвыклага, звужаюць круг знаёмстваў, выбіраючы "стабільнасьць", "быць як усё" і "што ж скажуць людзі?". 
+Фактар посьпеху зьвязаны з~тым, што ўдачлівыя людзі маюць нашмат шырэйшы фокус увагі і не зацыкліваюцца на бягучым заданьні. Гэта дазваляе ім быць гнуткімі, хутка перабудоўвацца і аптымальным чынам выкарыстаць наяўныя рэсурсы. Удачлівыя людзі часьцей імкнуцца да нявызначанасьці і з~задавальненьнем спрабуюць новае і нязвыклае, пашыраюць сваё камунікатыўнае кола. Цікава, але прыдакі і пасьпяховыя людзі часьцей, чым няўдакі, памыляюцца, але вельмі хутка аднаўляюцца пасьля памылак. У няўдакаў фокус увагі вельмі вузкі, яны ігнаруюць і не заўважаюць нічога, акрамя іх бягучага заданьня. Такая фіксацыя робіць іх трывожнымі, зацыкленымі, мэтай іх дзеяньняў становіцца пазьбяганьне памылак. Яны пагарджаюць альтэрнатыўнымі магчымасьцямі і ня могуць зьмяніць свае паводзіны, адмаўляюцца ад усяго нязвыклага, звужаюць круг знаёмстваў, выбіраючы ``стабільнасьць'', ``быць як усё'' і ``што ж скажуць людзі?''. 
 
-Няўдакі шукаюць "ідэальнае" рашэньне, нейкі "цуд", сакрэт ад гуру, што будзе здольны вырашыць адразу ўсе іх праблемы за адзін падыход. Калі чарговы рэцэпт не спрацоўвае, няўдака ня робіць высноў, а~проста пераключаецца на іншы "рэцэпт посьпеху". Падобная кагнітыўная памылка называецца «памылкай выжылага» і тлумачыць, чаму не працуюць чужыя сакрэты посьпеху. 
+Няўдакі шукаюць ``ідэальнае'' рашэньне, нейкі ``цуд'', сакрэт ад гуру, што будзе здольны вырашыць адразу ўсе іх праблемы за адзін падыход. Калі чарговы рэцэпт не спрацоўвае, няўдака ня робіць высноў, а~проста пераключаецца на іншы ``рэцэпт посьпеху''. Падобная кагнітыўная памылка называецца «памылкай выжылага» і тлумачыць, чаму не працуюць чужыя сакрэты посьпеху. 
 
 Як зрабіць свой розум гнуткім? Важна дэталёва разгледзець усе ідэі, спосабы, у~тым ліку тыя, якія вам не падабаюцца. Калі вы адчуваеце, што зацыкліваецеся на нечым, важна своечасова пераключыцца, адпачыць. Практыкуйце шматварыятыўнасьць і стымулюйце крэатыўнасьць: заўсёды майце альтэрнатыўныя спосабы дасягненьня мэты. 
 
@@ -517,13 +517,13 @@
 
 Як і любая іншая зьмена, паляпшэньне кагнітыўнае гнуткасьці пачынаецца з~усьведамленьня праблемы. Як толькі мы перастанем ваяваць з~рэальнасьцю, яна разгорне перад намі велізарную прастору магчымасьцяў. Трэба расплюшчыць вочы, каб убачыць дары рэальнасьці. І чым гнутчэйшы наш мозг, тым лягчэй нам да іх дацягнуцца.
 
-Займайцеся творчасьцю! Дасьледаваньні паказваюць, што многія праявы спантаннасьці, такія як экспрэсіўнае пісьмо, музыка, танец і арт-тэрапія паляпшаюць агульны стан чалавека, павышаюць стрэсаўстойлівасьць, зьніжаюць узровень картызолу. Арт-тэрапію хоць і разглядаюць як "сублімацыю", мне здаецца, лепш успрымаць гэтую мэтодыку як разнавід пошукавай актыўнасьці.
+Займайцеся творчасьцю! Дасьледаваньні паказваюць, што многія праявы спантаннасьці, такія як экспрэсіўнае пісьмо, музыка, танец і арт-тэрапія паляпшаюць агульны стан чалавека, павышаюць стрэсаўстойлівасьць, зьніжаюць узровень картызолу. Арт-тэрапію хоць і разглядаюць як ``сублімацыю'', мне здаецца, лепш успрымаць гэтую мэтодыку як разнавід пошукавай актыўнасьці.
 
 Арт-тэрапія~--- выдатны неканкурэнтны від дзейнасьці, які павышае актыўнасьць зьвіліны поясу, які зьніжае румінацыю. Ён паляпшае канцэнтрацыю ўвагі, дапамагае вырашыць унутрыасобасныя канфлікты і зьмяніць звыклыя паводзінныя стэрэатыпы. 
 
-Пры стрэсе выбар невялікі: альбо вывучаная бездапаможнасьць, альбо пошукавая актыўнасьць. Усё, што стымулюе новыя віды дзейнасьці, карыснае. Галоўнае~--- ня блытаць спантаннасьць і творчасьць з~імпульсіўнасьцю і няўстойлівасьцю ўвагі, гэта зусім розныя працэсы. Часта можна ўбачыць, што дэфіцыт увагі і гіпэрактыўнасьць успрымаюцца як "творчыя імпульсы", але гэта ня так.
+Пры стрэсе выбар невялікі: альбо вывучаная бездапаможнасьць, альбо пошукавая актыўнасьць. Усё, што стымулюе новыя віды дзейнасьці, карыснае. Галоўнае~--- ня блытаць спантаннасьць і творчасьць з~імпульсіўнасьцю і няўстойлівасьцю ўвагі, гэта зусім розныя працэсы. Часта можна ўбачыць, што дэфіцыт увагі і гіпэрактыўнасьць успрымаюцца як ``творчыя імпульсы'', але гэта ня так.
 
-Сачыненьне, маляваньне, ігра на інструмэнтах~--- усё працуе выдатна, нават калі ў~вас "пасрэдны" ўзровень. Таму, калі адчуваеце стрэс, займіцеся творчасьцю ці выявіце спантаннасьць любым са спосабаў. Дастаткова 45 хвілінаў творчасьці, каб прыкметна зьнізіць узровень картызолу. Нам зь дзецьмі цяпер лепш за ўсё пасуе драма~--- экспрэсіўнае разыгрываньне роляў і сюжэтаў, ад коцікаў да трансформэраў.
+Сачыненьне, маляваньне, ігра на інструмэнтах~--- усё працуе выдатна, нават калі ў~вас ``пасрэдны'' ўзровень. Таму, калі адчуваеце стрэс, займіцеся творчасьцю ці выявіце спантаннасьць любым са спосабаў. Дастаткова 45 хвілінаў творчасьці, каб прыкметна зьнізіць узровень картызолу. Нам зь дзецьмі цяпер лепш за ўсё пасуе драма~--- экспрэсіўнае разыгрываньне роляў і сюжэтаў, ад коцікаў да трансформэраў.
 
 \subsubsection{Пытаньні і заданьні}
 
@@ -548,7 +548,7 @@
 
 Дзеяньне аксытацыну мае гендэрную розьніцу. Калі мужчына кажа «адчапіся ад мяне~--- у~мяне стрэс», то жанчына~--- «пагавары са мной~--- у~мяне стрэс». Мужчынам павышэньне тэстастэрону дапамагае лягчэй пераадолець стрэс, а~аксытацын можа яшчэ ніжэй апусьціць узровень тэстастэрону. А вось у~жанчынаў аксытацын пры стрэсе працуе ідэальна.
 
-Аксытацын стымулюецца пры любых спосабах сацыяльнага "аб'яднаньня", калі мы адчуваем сувязь з~кім-небудзь. Нават бескантактавыя спосабы, такія як пачуцьцё прыналежнасьці да нечага, позірк у~вочы і камплімэнты, павялічваюць выдзяленьне аксытацыну. Асабліва магутна выклікаюць выкід аксытацыну маленькія дзеці~--- узьнікае замілаваньне і расслабленьне. 
+Аксытацын стымулюецца пры любых спосабах сацыяльнага ``аб'яднаньня'', калі мы адчуваем сувязь з~кім-небудзь. Нават бескантактавыя спосабы, такія як пачуцьцё прыналежнасьці да нечага, позірк у~вочы і камплімэнты, павялічваюць выдзяленьне аксытацыну. Асабліва магутна выклікаюць выкід аксытацыну маленькія дзеці~--- узьнікае замілаваньне і расслабленьне. 
 
 Большасьць цялесных спосабаў рэляксацыі так ці інакш уплываюць на актыўнасьць парасымпатыйнай нэрвовай сыстэмы. Галоўным нэрвам парасымпатыйнай сыстэмы зьяўляецца вагус, які злучае ўнутраныя органы і мозг, нясе інфармацыю пра стан цела. 
 
@@ -562,7 +562,7 @@
 
 Тонус вагуса ўплывае і на нашыя сацыяльныя паводзіны: чым больш у~нас сацыяльных кантактаў, чым больш пазітыву ў~камунікацыі, тым вышэйшы тонус вагуса. А чым вышэйшы тонус, тым больш мы маем камунікуем, -- узьнікае чарговае замкнёнае кола. Нізкі тонус вагуса зьвязаны з~кепскім настроем і пачуцьцём адзіноты. Вызначыць тонус вагуса можна, напрыклад, ацэньваючы ўзровень дыхальнай арытміі~--- гэта невялікае павышэньне пульсу пры ўдыху і зьніжэньне на выдыху. Зручнейшым зьяўляецца вымярэньне тонусу вагуса праз варыябельнасьць пульсу, што даступна ў~шматлікіх праграмах. Чым больш у~нас сацыяльных кантактаў, тым вышэйшы тонус вагуса. Нізкі тонус вагуса зьвязаны з~кепскім настроем і адчуваньнем самоты.
 
-Сацыяльныя рэсурсы. У адным з~дасьледаваньняў навукоўцы раілі кожны дзень запісваць тры сацыяльныя кантакты і ацэньваць іх, згаджаючыся ці абвяргаючы сьцьверджаньні: "я адчуваў гармонію з~гэтым чалавекам пры камунікацыі" і "я адчуваў блізкасьць з~гэтым чалавекам пры камунікацыі". А таксама ім раілі ацэньваць па пяцібальнай шкале ўзровень станоўчых (удзячнасьць, надзея, натхненьне, радасьць, цікавасьць, любоў, гонар, спакой, зьдзіўленьне, пашанота) і адмоўных эмоцыяў (злосьць, нуда, агіда, пагарда, зьбянтэжанасьць, страх, віна, нянавісьць, смутак, сорам) з~падлікам сярэдніх значэньняў. Высьветлілася, што эмацыйная ўсьвядомленасьць, то бок здольнасьць разьбірацца ў~сваіх эмоцыях, прыкметна павялічвае тонус вагуса. Падрабязна пра ўсьвядомленасьць пагаворым у~наступным разьдзеле. У дасьледаваньнях устаноўлена, што рэгулярная мэдытацыя дабрыні й любові павышае тонус вагуса. Таму гадуйце ў~сабе пачуцьці любові, добразычлівасьці, спагады да навакольных~--- гэта карысна і вам.
+Сацыяльныя рэсурсы. У адным з~дасьледаваньняў навукоўцы раілі кожны дзень запісваць тры сацыяльныя кантакты і ацэньваць іх, згаджаючыся ці абвяргаючы сьцьверджаньні: ``я адчуваў гармонію з~гэтым чалавекам пры камунікацыі'' і ``я адчуваў блізкасьць з~гэтым чалавекам пры камунікацыі''. А таксама ім раілі ацэньваць па пяцібальнай шкале ўзровень станоўчых (удзячнасьць, надзея, натхненьне, радасьць, цікавасьць, любоў, гонар, спакой, зьдзіўленьне, пашанота) і адмоўных эмоцыяў (злосьць, нуда, агіда, пагарда, зьбянтэжанасьць, страх, віна, нянавісьць, смутак, сорам) з~падлікам сярэдніх значэньняў. Высьветлілася, што эмацыйная ўсьвядомленасьць, то бок здольнасьць разьбірацца ў~сваіх эмоцыях, прыкметна павялічвае тонус вагуса. Падрабязна пра ўсьвядомленасьць пагаворым у~наступным разьдзеле. У дасьледаваньнях устаноўлена, што рэгулярная мэдытацыя дабрыні й любові павышае тонус вагуса. Таму гадуйце ў~сабе пачуцьці любові, добразычлівасьці, спагады да навакольных~--- гэта карысна і вам.
 
 Камплімэнты, абдымкі, знаходжаньне ў~бясьпечным асяродзьдзі, погляд вочы ў~вочы, пацалункі, абдымкі, сэкс. Паціскаць можна і цацкі, і хатніх жывёл, а~можна і паплакаць~--- гэта таксама актывуе вагус. Пацалунак ня меншы за 6 сэкундаў, абдымкі ня меншыя за 20 сэкундаў будуць найболей карысныя.
 
@@ -572,7 +572,7 @@
 
 Напрыклад, прагрэсіўная цяглічная рэляксацыя, дзе выкарыстоўваецца напруга цягліц, якая затым прыводзіць да іх паслабленьня. Пасьлядоўнасьць такая: напружваем ручыцы і перадплеччы (трэба моцна сьціснуць кулакі, паклаўшы вялікія пальцы зьверху), верхнія цягліцы рук (уціснуць локці ў~сьпінку крэсла або стол), твар (падняць бровы, заплюшчыць вочы, наморшчыць нос, зрабіць усьмешку з~апушчанымі куточкамі вуснаў), шыю (уціснуць падбародак у~вобласьць адамава яблыка), тулава (адвесьці лапаткі назад і моцна прагнуць сьпіну), ногі (падняць уверх і напружыць, пальцы ў~падлогу, затым тое ж самае, але пальцы ў~столь). У кожным сьціску затрымайцеся на некалькі удыхаў, а~затым зрабіце павольны выдых, расслабляючы цягліцы.
 
-Таксама фізычная актыўнасьць павялічвае тонус вагуса, зьмяншае пульс супакою. Чым больш вы трэніраваныя, тым больш стрэсаўстойлівыя. А акрамя гэтага, фізычная актыўнасьць~--- гэта найлепшы спосаб завяршэньня стрэсавай рэакцыі і яе наступстваў. Бо для нашага цела любы стрэс~--- гэта фізычная актыўнасьць, "бі або бяжы".
+Таксама фізычная актыўнасьць павялічвае тонус вагуса, зьмяншае пульс супакою. Чым больш вы трэніраваныя, тым больш стрэсаўстойлівыя. А акрамя гэтага, фізычная актыўнасьць~--- гэта найлепшы спосаб завяршэньня стрэсавай рэакцыі і яе наступстваў. Бо для нашага цела любы стрэс~--- гэта фізычная актыўнасьць, ``бі або бяжы''.
 
 Аўтагенная трэніроўка. Гэта просты і эфэктыўны спосаб рэляксацыі, заснаваны на візуалізацыі. Пачынаючы з~ручыцаў і ступакоў, далей рухаючыся па ўсім целе, мы па чарзе ўяўляем у~іх «цяжар»~--- на расслабленьне цяглічнага тонусу, і «цяпло»~--- на пашырэньне сасудаў скурнага покрыва. Візуалізацыя прахалоды на лобе можа дапамагчы ў~аслабленьні галаўнога болю.
 
@@ -582,13 +582,13 @@
 
 Спакойнае мернае глыбокае дыханьне зьніжае актыўнасьць сымпатыйнай стрэсавай сыстэмы і павышае актыўнасьць парасымпатыйнай, стымулюе блукальны нэрв і запавольвае частасьць сардэчных скарачэньняў.
 
-Для расслабляльнага дыханьня патрэбныя: кароткі ўдых, доўгі выдых (у некалькі разоў даўжэйшы за ўдых), глыбокае павольнае дыяфрагмальнае дыханьне, затрымкі на выдыху ў~межах камфорту. Можна лічыць пра сябе, напрыклад удых на 4 лікі, выдых на 8 лікаў, затрымка на выдыху на 6 лікаў. Такое "ўсьвядомленае дыханьне" на лік дапамагае пры шматлікіх захворваньнях, паляпшае сон, зьніжае ціск, паляпшае ўвагу. Пры неабходнасьці скарыстайцеся праграмамі для дыханьня~--- іх цяпер мноства, і трымайце абразок праграмы на галоўным экране смартфона, так вам будзе прасьцей згадаць пра неабходнасьць "падыхаць".
+Для расслабляльнага дыханьня патрэбныя: кароткі ўдых, доўгі выдых (у некалькі разоў даўжэйшы за ўдых), глыбокае павольнае дыяфрагмальнае дыханьне, затрымкі на выдыху ў~межах камфорту. Можна лічыць пра сябе, напрыклад удых на 4 лікі, выдых на 8 лікаў, затрымка на выдыху на 6 лікаў. Такое ``ўсьвядомленае дыханьне'' на лік дапамагае пры шматлікіх захворваньнях, паляпшае сон, зьніжае ціск, паляпшае ўвагу. Пры неабходнасьці скарыстайцеся праграмамі для дыханьня~--- іх цяпер мноства, і трымайце абразок праграмы на галоўным экране смартфона, так вам будзе прасьцей згадаць пра неабходнасьць ``падыхаць''.
 
 Электрастымуляцыя вагуса. Апошнім часам атрымала распаўсюджваньне празскурная стымуляцыя вагуса простымі прыборамі, у~тым ліку і для хатняга выкарыстаньня. Яна прызначаная для барацьбы зь мігрэньню, дэпрэсіяй (уключаючы працяглую, цяжкую, устойлівую да антыдэпрэсантаў), эпілепсіяй, экспэрымэнтальна выкарыстоўваецца як частка супрацьзапаленчай і антыстрэсавай тэрапіі.
 
 Прапрацоўка мяккіх тканак. Людзі здавён-даўна практыкавалі лазьні, водныя працэдуры, масаж як спосабы палепшыць сваё здароўе і самаадчуваньне. Практычна ўсе падыходы, накіраваныя на цягліцы і скуру, надкосьніцу, карысныя пры стрэсе, стымулююць тонус вагуса і выдзяленьне аксытацыну. Гэта стараннае расьціраньне цела ручніком або шчоткай для цела, прапрацоўка валікам мяккіх тканак, усе віды масажаў, акупунктура, расчэсваньне валасоў, касмэталягічныя працэдуры і СПА. Малпы выкарыстоўваюць грумінг~--- расчэсваньне~--- як спосаб зьніжэньня стрэсу і паляпшэньня сацыяльных сувязяў.
 
-Харчаваньне. Частае дробавае харчаваньне, вялікая колькасьць бялку і цукру, лішак высокаглікемічных вугляводаў стымулююць mTOR і спрыяюць павелічэньню актыўнасьці сымпатыйнай сыстэмы. Таму цалкам можна сказаць, што "ты такі нэрвовы празь мяса". Дбайнае перажоўваньне, нізкая ўдзельная шчыльнасьць ежы (агародніна, зеляніна), ежа ў~сямейным або сяброўскім коле, рэгулярны фастынг, адсутнасьць перакусаў, вялікая доля тлустай ежы спрыяюць паляпшэньню тонусу вагуса. Ёсьць зьвесткі, што даданьне амэга-3, цынку, лакта- і біфідабактерій, пра- і прэбіётыкаў можа таксама дапамагаць.
+Харчаваньне. Частае дробавае харчаваньне, вялікая колькасьць бялку і цукру, лішак высокаглікемічных вугляводаў стымулююць mTOR і спрыяюць павелічэньню актыўнасьці сымпатыйнай сыстэмы. Таму цалкам можна сказаць, што ``ты такі нэрвовы празь мяса''. Дбайнае перажоўваньне, нізкая ўдзельная шчыльнасьць ежы (агародніна, зеляніна), ежа ў~сямейным або сяброўскім коле, рэгулярны фастынг, адсутнасьць перакусаў, вялікая доля тлустай ежы спрыяюць паляпшэньню тонусу вагуса. Ёсьць зьвесткі, што даданьне амэга-3, цынку, лакта- і біфідабактерій, пра- і прэбіётыкаў можа таксама дапамагаць.
 
 Загрызіце свой стрэс! На курсе, прысьвечаным харчаваньню, я шмат расказваю пра важнасьць жаваньня, на стрэсаўстойлівасьць гэты працэс таксама ўплывае. Жаваньне зьяўляецца дзейснай стрэсавай копінг-стратэгій, а~пры лішку стрэсу часта назіраецца бруксізм~--- скрыгат зубамі ў~сьне, які павялічвае рызыку карыесу ды іншых праблемаў. Дасьледаваньні паказваюць, што жаваньне зьніжае ўзровень выдзяленьня норадрэналіну ў~мігдаліне, узроўні АКТГ і картызолу, таксама зьніжае актыўнасьць стрэсавай восі, дзейнічаючы праз картызолавыя рэцэптары ў~гіпакампе, і кагнітыўны дэфіцыт, выкліканы стрэсавым пашкоджаньнем гіпакампа. Чым больш інтэнсіўнае жаваньне, тым больш прыкметна зьніжаецца ўзровень картызолу і адрэналіну: хуткае жаваньне зьніжае ўзровень картызолу на 26\,\% за 20 хвілінаў. Што жаваць? Аптымальна гэта цьвёрдая ежа, напрыклад, морква ці яблык,~--- усе вынікі можна перанесьці й на жуйку.
 
