--- a/belaveshkin.sty
+++ b/belaveshkin.sty
@@ -7,6 +7,7 @@
 \RequirePackage{needspace}
 \RequirePackage{awesomebox}
 \RequirePackage{setspace}
+\RequirePackage[xindy]{imakeidx}
 \RequirePackage[version=4,arrows=pgf-filled,textfontname=sffamily,mathfontname=mathsf]{mhchem}
 \defaultfontfeatures{Ligatures={TeX}}
 \RequirePackage[english,belarusian]{babel}
@@ -17,6 +18,7 @@
     linktoc=all, % 'all' will create links for everything in the TOC
     % pdftitle={Што і калі есьці.},
 }
+\makeindex[program=texindy, options=-M belaveshkin.xdy -L belarusian -C utf8]
 
 %%%%%  FONTS  %%%%%
 \setmainfont[
